--- a/CZE_l_english.yml
+++ b/CZE_l_english.yml
@@ -58,7 +58,7 @@
       CZKE_milan_hodza_advisor_desc:0 "밀란 호자는 슬로바키아 출신의 유명한 정치인이면서 저널리스트 입니다.1935년부터 1938년까지 체코슬로바키아의 수상이었습니다.\n\n지역 통합의 지지자 로써,그는 중앙 유럽의 민주 연합을 설립하려는 시도로 더 유명했습니다."
 
     czke.1.t:0 "주데텐란트의 문제"
-    czke.1.d:0 "독일의 라인란트 점령과 함께, 주데텐란트 지역의 독일인들은 날이 갈수록 불안해지고 있습니다. Although the leader of the Sudeten German Party (SdP), Konrad Heinlein, reassures Czechoslovak government of the loyalty of Germans in Czechoslovakia and distances himself from German National Socialism, intelligence reports says otherwise.\n\nThe right of self-determination for Sudenland Germans, pan-germanism and even open sympathy for the ideals of National Socialism is more than common occurrence in SDP political rallies."
+    czke.1.d:0 "독일의 라인란트 점령과 함께, 주데텐란트 지역의 독일인들은 날이 갈수록 불안해지고 있습니다. 비록 주데텐 독일당(SdP)의 지도자 콘라드 하인레인은, 체코슬로바카의 독일인들은 독일 국가사회주의에 그들 스스로 거리를 두고있다고 말하며 체코슬로바키아 정부를 안심시켰지만, 고서에는 다르게 말하고 있습니다.\n\nThe right of self-determination for Sudenland Germans, pan-germanism and even open sympathy for the ideals of National Socialism is more than common occurrence in SDP political rallies."
     czke.1.a:0 "걱정마라.단순히 정치적 포퓰리즘 일 뿐이야."
       CZKE_unruly_minorities:0 "주데텐란트 문제"
       CZKE_unruly_minorities_desc:0 "Czechoslovakia was a multi-ethnic state created from parts of old Austrio-Hungary Empire and except for the Czechs and Slovaks, was also home to many ethnic Germans, Hungarians, Jews and Rusyns.\n\nThe aftermath of The Great Depression and increasing fascism in Europe causes immerse problems for the young country, especially the ethnic-Germans that were seduced by Hitler's pan-Germanism idea."
@@ -70,24 +70,24 @@
     czke.3.a:0 "체코슬로바키아의 슬픈날이군."
     czke.3.b:0 "신경써야할 자본주의자가 하나 줄었다."
     czke.3.c:0 "마침내, 늙은 염소가 죽은것인가!"
-    czke.4.t:0 "SdP declares Karlsbad Program"
+    czke.4.t:0 "SdP가 카를로비바리 프로그램을 선언하다"
     czke.4.d:0 "On [GetDateText] the SdP proclaimed the "Karlsbader Program", which demanded in eight points the complete equality between the Sudeten Germans and the Czech people, including autonomy in regions occupied by ethnic-Germans.\n\nThe Prague government initially refused, claiming that some points were simply unrealizable, but under the pressure of the United Kingdom (Lord Runciman Mission) eventually agreed to the majority of the demands presented by Henlein's party. However, the Germans were not satisfied by this and additional, mainly unacceptable or unrealizable, demands were made to further escalate the situation and create international pressure on Czechoslovakia, which eventually resulted in the Munich Conference."
-    czke.4.a:0 "We have to do something..."
-      CZKE_unruly_minorities_2:0 "Sudetenland Crisis"
-      CZKE_unruly_minorities_2_desc:0 "SdP proclamed Karlsbader Program and the ethnic-Germans demand self-determination."
-      czke_karlsbad_program:0 " SdP is not radicalized."
-    czke.5.t:0 "Fifth column established in Czechoslovakia"
-    czke.5.d:0 "Few weeks before the Munich conference, Hitler made a speech at a Nazi Party rally in Nuremberg on the Sudeten crisis in which he condemned the actions of the government of Czechoslovakia.\n\nHitler denounced Czechoslovakia as being a fraudulent state that was in violation of international law's emphasis of national self-determination, claiming it was a Czech hegemony where neither the Germans, the Slovaks, the Hungarians, the Ukrainians, nor the Poles of the country actually wanted to be in a union with the Czechs.\n\nJust a week later the Führer ordered the establishment of Sudetendeutsches Freikorps, a paramilitary organization that took over the structure of Ordnersgruppe, an organization of ethnic-Germans in Czechoslovakia that had been dissolved by the Czechoslovak authorities due to its implication in large number of terrorist activities. The organization was sheltered, trained and equipped by German authorities and conducting cross border terrorist operations into Czechoslovak territory.\n\nMany ethnic-Germans refused to follow the Czechoslovak army mobilization order and either ran across the border to Germany and joined Freikorps, continuing cross border raids from there, or established Grün Freikorps units which were operating from Czechoslovak forests, receiving arms and equipment from Germany, and continuing raids against Czechoslovak authorities, Jews and Czechs, up until the German occupation of the Czechoslovak border areas following the Munich agreement."
-    czke.5.a:0 "Declare Martial Law!"
-      CZKE_fifth_column:0 "Fifth Column"
-      CZKE_fifth_column_desc:0 "Sudetendeutsches Freikorps operates in Czechoslovakia."
-      CZKE_fifth_column_2:0 "Fifth Column"
-      CZKE_fifth_column_desc_2:0 "Sudetendeutsches Freikorps operates in Czechoslovakia."
-    czke.6.t:0 "Mobilization!"
+    czke.4.a:0 "우린 뭔가를 해야만해..."
+      CZKE_unruly_minorities_2:0 "주데텐란트 위기"
+      CZKE_unruly_minorities_2_desc:0 "Sdp는 카를로비바리 프로그램을 선언하고 독일민족의 민족 자결권을 요구했습니다."
+      czke_karlsbad_program:0 " SdP가 과격하지는 않아."
+    czke.5.t:0 "체코슬로바키아에게 인정받은 제 5열"
+    czke.5.d:0 "뮌헨 협정 몇주전에, 히틀러는 뉘른베르크에서 열린 나치당 집회에서 체코슬로바키아 정부의 행동을 규탄하는 주데텐 위기에 관한 연설을 했습니다.\n\n히틀러는 체코슬로바키아를 국제법의 민족자결주의 강조를 위반하는 사기꾼이라고 비난하면서 독일인도, 슬로바키아인, 헝가리인, 우크라이나인, 폴란드인도 모두 체코와 연합하기를 원하지 않는 체코 패권국이라고 주장했습니다.\n\nJust a week later the Führer ordered the establishment of Sudetendeutsches Freikorps, a paramilitary organization that took over the structure of Ordnersgruppe, an organization of ethnic-Germans in Czechoslovakia that had been dissolved by the Czechoslovak authorities due to its implication in large number of terrorist activities. The organization was sheltered, trained and equipped by German authorities and conducting cross border terrorist operations into Czechoslovak territory.\n\nMany ethnic-Germans refused to follow the Czechoslovak army mobilization order and either ran across the border to Germany and joined Freikorps, continuing cross border raids from there, or established Grün Freikorps units which were operating from Czechoslovak forests, receiving arms and equipment from Germany, and continuing raids against Czechoslovak authorities, Jews and Czechs, up until the German occupation of the Czechoslovak border areas following the Munich agreement."
+    czke.5.a:0 "계엄령을 선포하라!"
+      CZKE_fifth_column:0 "제 5열"
+      CZKE_fifth_column_desc:0 "주데텐란트 독일인들의 의용병들이 체코슬로바키아에서 활동하고 있습니다."
+      CZKE_fifth_column_2:0 "제 5열"
+      CZKE_fifth_column_desc_2:0 "주데텐란트 독일인들의 의용병들이 체코슬로바키아에서 활동하고 있습니다."
+    czke.6.t:0 "동원!"
     czke.6.d:0 "Czechoslovak leadership rejects the British-French suggestion for Czechoslovakia to cede the Sudetenland to Germany.\n\nA state of emergency and general mobilization was declared soon after. The mobilization order applied to about 1,250,000 soldiers, which included reservists called up earlier for various exercises.\n\nResponse to the announcement of a general mobilization was extremely fast; first reservists reported for duty just a few minutes after hearing the decree from the radio and the influx of soldiers increased rapidly in following hours.\n\nDuring the night, the army took control and guarded key strategic buildings and military units reformed to war organization.\n\nCzechoslovakia was ready to defend its independence."
-    czke.6.a:0 "Truth Prevails!"
-      CZKE_mobilization_1938:0 "Mobilization."
-      CZKE_mobilization_1938_desc:0 "Full Mobilization order was issue. Reservists are gathering at their units."
+    czke.6.a:0 "진실은 승리한다!"
+      CZKE_mobilization_1938:0 "동원이다."
+      CZKE_mobilization_1938_desc:0 "총동원령이 발표되었습니다.예비군들이 그들의 부대로 모이고 있습니다."
       CZKE_mobilisation_formation_template_tooltip_reward:0 "§MSpecial Bonus:§! New Division Template (§YMobilizační Těleso§! - Mobilised Formation)."
 
   CZKE_great_depression_aftermath:0 "대공황의 여파"
