--- a/replace/parties_l_english.yml
+++ b/replace/parties_l_english.yml
@@ -153,217 +153,217 @@
  FIN_neutrality_party:1 "ML"
  FIN_neutrality_party_long:1 "핀란드 중앙당"
  FIN_democratic_party:0 "SDP"
- FIN_democratic_party_long:0 "Suomen Sosialidemokraattinen Puolue"
+ FIN_democratic_party_long:0 "핀란드 사회민주당"
  FIN_fascism_party:0 "IKL"
- FIN_fascism_party_long:0 "Isänmaallinen Kansanliike"
+ FIN_fascism_party_long:0 "애국인민운동"
  FIN_communism_party:0 "SKP"
- FIN_communism_party_long:0 "Suomen Kommunistinen Puolue"
- DEN_democratic_party:0 "Socialdemokratiet"
- DEN_democratic_party_long:0 "Socialdemokratiet"
+ FIN_communism_party_long:0 "핀란드 공산당"
+ DEN_democratic_party:0 "사회민주당"
+ DEN_democratic_party_long:0 "사회민주당"
  DEN_fascism_party:0 "DNSAP"
- DEN_fascism_party_long:0 "Danmarks Nationalsocialistiske Arbejderparti"
+ DEN_fascism_party_long:0 "국가사회주의 덴마크 노동자당"
  DEN_communism_party:0 "DKP"
- DEN_communism_party_long:0 "Danmarks Kommunistiske Parti"
- DEN_neutrality_party:0 "Radikale Venstre"
- DEN_neutrality_party_long:0 "Det Radikale Venstre"
- CAN_democratic_party:0 "Liberal Party"
- CAN_democratic_party_long:0 "Liberal Party of Canada"
- CAN_fascism_party:0 "National Unity Party"
- CAN_fascism_party_long:0 "National Unity Party"
+ DEN_communism_party_long:0 "덴마크 공산당"
+ DEN_neutrality_party:0 "자유당"
+ DEN_neutrality_party_long:0 "사회자유당"
+ CAN_democratic_party:0 "자유당"
+ CAN_democratic_party_long:0 "캐나다 자유당"
+ CAN_fascism_party:0 "국민 통일당"
+ CAN_fascism_party_long:0 "국민 통일당"
  CAN_communism_party:0 "CPC"
- CAN_communism_party_long:0 "Communist Party of Canada"
+ CAN_communism_party_long:0 "캐나다 공산당"
  CAN_neutrality_party:0 "CCF"
- CAN_neutrality_party_long:0 "Co-operative Commonwealth Federation"
+ CAN_neutrality_party_long:0 "협동연방당"
  AST_neutrality_party:0 "ACP"
- AST_neutrality_party_long:0 "Australian Country Party"
- AST_democratic_party:0 "Labor"
- AST_democratic_party_long:0 "Australian Labor Party"
- AST_fascism_party:0 "Centre Party"
- AST_fascism_party_long:0 "Centre Party"
+ AST_neutrality_party_long:0 "오스트레일리아 국가당"
+ AST_democratic_party:0 "노동당"
+ AST_democratic_party_long:0 "오스트레일리아 노동당"
+ AST_fascism_party:0 "중앙당"
+ AST_fascism_party_long:0 "중앙당"
  AST_communism_party:0 "CPA"
- AST_communism_party_long:0 "Communist Party of Australia"
+ AST_communism_party_long:0 "오스트레일리아 공산당"
  MEX_democratic_party:1 "PLC"
- MEX_democratic_party_long:1 "Partido Liberal Constitucionalista"
+ MEX_democratic_party_long:1 "헌정 자유당"
  MEX_fascism_party:0 "UNS"
- MEX_fascism_party_long:0 "Unión Nacional Sinarquista"
+ MEX_fascism_party_long:0 "국민공동통치연합"
  MEX_communism_party:0 "PCM"
- MEX_communism_party_long:0 "Partido Comunista Mexicano"
+ MEX_communism_party_long:0 "멕시코 공산당"
  MEX_neutrality_party:1 "PNR"
- MEX_neutrality_party_long:1 "Partido Nacional Revolucionario"
+ MEX_neutrality_party_long:1 "제도혁명당"
  ARG_democratic_party:0 "UCR"
- ARG_democratic_party_long:0 "Unión Cívica Radical"
+ ARG_democratic_party_long:0 "급진시민연합"
  ARG_fascism_party:0 "UNF"
- ARG_fascism_party_long:0 "Union Nacional Fascista"
+ ARG_fascism_party_long:0 "파시스트 연합"
  ARG_communism_party:0 "PC"
- ARG_communism_party_long:0 "Partido Comunista de la Argentina"
- ARG_neutrality_party:0 "Concordancia"
- ARG_neutrality_party_long:0 "Concordancia"
+ ARG_communism_party_long:0 "아르헨티나 공산당"
+ ARG_neutrality_party:0 "협동당"
+ ARG_neutrality_party_long:0 "협동당"
  BRA_fascism_party:1 "AIB"
- BRA_fascism_party_long:1 "Ação Integralista Brasileira"
+ BRA_fascism_party_long:1 "브라질 통일주의 행동당"
  BRA_communism_party:1 "PCB"
- BRA_communism_party_long:1 "Partido Comunista Brasileiro"
+ BRA_communism_party_long:1 "브라질 공산당"
  BRA_democratic_party:1 "UDB"
- BRA_democratic_party_long:1 "União Democrática Brasileira"
- BRA_neutrality_party:0 "Estado Novo"
- BRA_neutrality_party_long:0 "Estado Novo"
- TUR_fascism_party:0 "Millet Partisi"
- TUR_fascism_party_long:0 "Millet Partisi"
+ BRA_democratic_party_long:1 "브라질 민주 연합"
+ BRA_neutrality_party:0 "이스타두 노부"
+ BRA_neutrality_party_long:0 "이스타두 노부"
+ TUR_fascism_party:0 "국가당"
+ TUR_fascism_party_long:0 "국가당"
  TUR_communism_party:0 "TKP"
- TUR_communism_party_long:0 "Türkiye Komünist Partisi"
+ TUR_communism_party_long:0 "터키 공산당"
  TUR_democratic_party:0 "DP"
- TUR_democratic_party_long:0 "Demokrat Parti"
+ TUR_democratic_party_long:0 "민주당"
  TUR_neutrality_party:0 "CHP"
- TUR_neutrality_party_long:0 "Cumhuriyet Halk Partisi"
- HUN_fascism_party:1 "Horthy Government"
+ TUR_neutrality_party_long:0 "공화 인민당"
+ HUN_fascism_party:1 "호르티 정권"
  HUN_arrow_cross_party:0 "NPHM"
- HUN_arrow_cross_party_long:0 "Nyilaskeresztes Párt – Hungarista Mozgalom"
+ HUN_arrow_cross_party_long:0 "화살십자당"
  HUN_communism_party:0 "KMP"
- HUN_communism_party_long:0 "Kommunisták Magyarországi Pártja"
+ HUN_communism_party_long:0 "헝가리 공산당"
  HUN_democratic_party:0 "SZDP"
- HUN_democratic_party_long:0 "Szociáldemokrata Párt"
+ HUN_democratic_party_long:0 "헝가리 사회민주당"
  HUN_neutrality_party:0 "F48P"
- HUN_neutrality_party_long:0 "Függetlentségi és 48-as Párt"
- HUN_legitimists_party:0 "Legitimists"
- HUN_legitimists_party_long:0 "Legitimists"
+ HUN_neutrality_party_long:0 "독립당과 48"
+ HUN_legitimists_party:0 "정통왕당파"
+ HUN_legitimists_party_long:0 "정통왕당파"
  ROM_neutrality_party:0 "FRN"
- ROM_neutrality_party_long:0 "Frontul Renasterii Nationale"
+ ROM_neutrality_party_long:0 "국가 르네상스 전선"
  ROM_communism_party:0 "PCR"
- ROM_communism_party_long:0 "Partidul Comunist Roman"
+ ROM_communism_party_long:0 "루마니아 공산당"
  ROM_democratic_party:0 "PNL"
- ROM_democratic_party_long:0 "Partidul National Liberal"
- ROM_fascism_party:0 "Garda de Fier"
- ROM_fascism_party_long:0 "Garda de Fier"
+ ROM_democratic_party_long:0 "국민 자유당"
+ ROM_fascism_party:0 "철위대"
+ ROM_fascism_party_long:0 "철위대"
  YUG_communism_party:0 "KPJ"
- YUG_communism_party_long:0 "Komunisticna partija Jugoslavije"
- YUG_democratic_party:0 "Demokratska stranka"
- YUG_democratic_party_long:0 "Jugoslovanska demokratska stranka"
- YUG_neutrality_party:0 "Regency Council"
- YUG_neutrality_party_2:0 "Monarchists"
+ YUG_communism_party_long:0 "유고슬라비아 공산주의자 동맹"
+ YUG_democratic_party:0 "민주당"
+ YUG_democratic_party_long:0 "유고슬라비아 민주당"
+ YUG_neutrality_party:0 "섭정 의회"
+ YUG_neutrality_party_2:0 "왕당파"
  YUG_fascism_party:0 "JRZ"
- YUG_fascism_party_long:0 "Jugoslovanska radikalna skupnost"
- SER_communism_party:0 "League of Communists"
- SER_communism_party_long:0 "League of Communists"
- SER_democratic_party:0 "Mihailovic Chetniks"
- SER_democratic_party_long:0 "Mihailovic Chetniks"
- SER_fascism_party:1 "National Salvation"
- SER_fascism_party_long:1 "Government of National Salvation"
- SER_neutrality_party:0 "Royalists"
- SER_neutrality_party_long:0 "Royalists"
- BUL_neutrality_party:0 "Tsar Boris loyalists"
+ YUG_fascism_party_long:0 "유고슬라비아 급진 연합"
+ SER_communism_party:0 "세르비아 공산주의자 동맹"
+ SER_communism_party_long:0 "새르비아 공산주의자 동맹"
+ SER_democratic_party:0 "미하일로비치 체트니크"
+ SER_democratic_party_long:0 "미하일로비치 체트니크"
+ SER_fascism_party:1 "세르비아 구국정부"
+ SER_fascism_party_long:1 "세르비아 구국정부"
+ SER_neutrality_party:0 "왕당파"
+ SER_neutrality_party_long:0 "왕당파"
+ BUL_neutrality_party:0 "차르 보리스 왕당파"
  BUL_communism_party:0 "BCP"
- BUL_communism_party_long:0 "Bulgarian Communist Party"
+ BUL_communism_party_long:0 "불가리아 공산당"
  BUL_democratic_party:1 "BZNS"
- BUL_democratic_party_long:1 "Bulgarski Zemedelski Naroden Sayuz"
+ BUL_democratic_party_long:1 "불가리아 농민 연합"
  BUL_fascism_party:0 "UBNL"
- BUL_fascism_party_long:0 "The Union of Bulgarian National Legions"
+ BUL_fascism_party_long:0 "불가리아 국가 군단 연맹"
  SAF_neutrality_party:0 "ANC"
- SAF_neutrality_party_long:0 "African National Congress"
+ SAF_neutrality_party_long:0 "아프리카 국민회의"
  SAF_communism_party:0 "SACP"
- SAF_communism_party_long:0 "South African Communist Party"
+ SAF_communism_party_long:0 "남아프리카 공산당"
  SAF_democratic_party:0 "United"
- SAF_democratic_party_long:0 "United National South African Party"
+ SAF_democratic_party_long:0 "남아프리카 통합당"
  SAF_fascism_party:0 "GNP"
- SAF_fascism_party_long:0 "Gesuiwerde Nasionale Party"
- NZL_neutrality_party:0 "National"
- NZL_neutrality_party_long:0 "New Zealand National Party"
- NZL_democratic_party:0 "Labour"
- NZL_democratic_party_long:0 "New Zealand Labour Party"
- NZL_fascism_party:0 "Legion"
- NZL_fascism_party_long:0 "New Zealand Legion"
+ SAF_fascism_party_long:0 "정화국민당"
+ NZL_neutrality_party:0 "국민당"
+ NZL_neutrality_party_long:0 "뉴질랜드 국민당"
+ NZL_democratic_party:0 "노동당"
+ NZL_democratic_party_long:0 "뉴질랜드 노동당"
+ NZL_fascism_party:0 "군단"
+ NZL_fascism_party_long:0 "뉴질랜드 군단"
  NZL_communism_party:0 "CPNZ"
- NZL_communism_party_long:0 "Communist Party of New Zealand"
- NOR_neutrality_party:0 "Venstre"
- NOR_neutrality_party_long:0 "Venstre"
+ NZL_communism_party_long:0 "뉴질랜드 공산당"
+ NOR_neutrality_party:0 "벤스터"
+ NOR_neutrality_party_long:0 "벤스터"
  NOR_communism_party:0 "NKP"
- NOR_communism_party_long:0 "Norges Kommunistiske Parti"
+ NOR_communism_party_long:0 "노르웨이 공산당"
  NOR_democratic_party:0 "AP"
- NOR_democratic_party_long:0 "Arbeiderpartiet"
+ NOR_democratic_party_long:0 "노동당"
  NOR_fascism_party:0 "NS"
- NOR_fascism_party_long:0 "Nasjonal Samling"
+ NOR_fascism_party_long:0 "국민연합"
  HOL_neutrality_party:1 "NVB"
- HOL_neutrality_party_long:1 "Nederlandse Volksbeweging"
+ HOL_neutrality_party_long:1 "네덜란드 대중당"
  HOL_communism_party:0 "CPN"
- HOL_communism_party_long:0 "Communistische Partij Nederland"
+ HOL_communism_party_long:0 "네덜란드 공산당"
  HOL_democratic_party:1 "ARP"
- HOL_democratic_party_long:1 "Anti-Revolutionaire Partij"
+ HOL_democratic_party_long:1 "반혁명당"
  HOL_fascism_party:0 "NSB"
- HOL_fascism_party_long:1 "Nationaal-Socialistische Beweging"
+ HOL_fascism_party_long:1 "네덜란드 국가 사회 운동"
  HOL_CHU_party:0 "CHU"
- HOL_CHU_party_long:0 "Christelijk-Historische Unie"
+ HOL_CHU_party_long:0 "기독교역사연합"
  BEL_communism_party:0 "KPB"
- BEL_communism_party_long:0 "Kommunistische Partij van België"
- BEL_democratic_party:0 "Catholic Block"
- BEL_democratic_party_long:0 "Catholic Block"
- BEL_fascism_party:0 "Rex"
- BEL_fascism_party_long:0 "Parti Rexiste"
+ BEL_communism_party_long:0 "벨기에 공산당"
+ BEL_democratic_party:0 "가톨릭 연합"
+ BEL_democratic_party_long:0 "가톨릭 연합"
+ BEL_fascism_party:0 "렉스"
+ BEL_fascism_party_long:0 "렉스당"
  SWI_communism_party:0 "KPS"
- SWI_communism_party_long:0 "Kommunistische Partei der Schweiz"
- SWI_democratic_party:0 "Federal Council"
- SWI_democratic_party_long:0 "Federal Council"
+ SWI_communism_party_long:0 "스위스 공산당"
+ SWI_democratic_party:0 "연방 의회"
+ SWI_democratic_party_long:0 "연방 의회"
  SWI_neutrality_party:0 "FDP"
- SWI_neutrality_party_long:0 "Freisinnig-Demokratische Partei"
+ SWI_neutrality_party_long:0 "스위스 자유민주당"
  SWI_fascism_party:0 "FB"
- SWI_fascism_party_long:0 "Fronten Bewegung"
+ SWI_fascism_party_long:0 "국민전선"
  RAJ_neutrality_party:0 "INC"
- RAJ_neutrality_party_long:0 "Indian National Congress"
+ RAJ_neutrality_party_long:0 "인도 국민회의"
  RAJ_communism_party:0 "CPI"
- RAJ_communism_party_long:0 "Communist Party of India"
+ RAJ_communism_party_long:0 "인도 공산당"
  RAJ_democratic_party:0 "IIM"
- RAJ_democratic_party_long:0 "Indian Independence Movement"
+ RAJ_democratic_party_long:0 "인도 독립운동"
  RAJ_fascism_party:0 "AIHA"
- RAJ_fascism_party_long:0 "All-India Hindu Assembly"
- PER_communism_party:0 "Tudeh Party"
- PER_communism_party_long:0 "Tudeh Party"
- PER_neutrality_party:0 "Pahlavi Dynasty"
+ RAJ_fascism_party_long:0 "전인도 힌두의회"
+ PER_communism_party:0 "민중당"
+ PER_communism_party_long:0 "이란 민중당"
+ PER_neutrality_party:0 "팔라비 왕조"
  COL_communism_party:0 "PCC"
- COL_communism_party_long:0 "Partido Comunista Colombiano"
+ COL_communism_party_long:0 "콜롬비아 공산당"
  COL_democratic_party:0 "PLC"
- COL_democratic_party_long:0 "Partido Liberal Colombiano"
+ COL_democratic_party_long:0 "콜롬비아 자유당"
  COL_neutrality_party:0 "Conservador"
- COL_neutrality_party_long:0 "Partido Conservador Colombiano"
+ COL_neutrality_party_long:0 "콜롬비아 보수당"
  CZE_communism_party:0 "KSC"
- CZE_communism_party_long:0 "Komunistická strana Ceskoslovenska"
+ CZE_communism_party_long:0 "체코슬로바키아 공산당"
  CZE_democratic_party:0 "CSNS"
- CZE_democratic_party_long:0 "Ceská strana národne sociální"
+ CZE_democratic_party_long:0 "체코 국민사회당"
  CZE_fascism_party:0 "NOF"
- CZE_fascism_party_long:0 "Národní obec fašistická"
+ CZE_fascism_party_long:0 "국가 파시스트 공동체"
  CHL_fascism_party:0 "VPS"
- CHL_fascism_party_long:0 "Vanguardia Popular Socialista"
- CHL_democratic_party:0 "Partido Liberal"
+ CHL_fascism_party_long:0 "대중사회주의 전위당"
+ CHL_democratic_party:0 "콜롬비아 자유당"
  CHL_communism_party:0 "PCCh"
- CHL_communism_party_long:0 "Partido Comunista de Chile"
- ETH_neutrality_party:0 "Solomonic Dynasty"
- ETH_democratic_party:0 "Woyane rebellion"
- ALB_neutrality_party:0 "House of Zogu"
- ALB_neutrality_party_long:0 "House of Zogu"
+ CHL_communism_party_long:0 "칠레 공산당"
+ ETH_neutrality_party:0 "솔로몬 왕조"
+ ETH_democratic_party:0 "우마르 반란"
+ ALB_neutrality_party:0 "조그 왕가"
+ ALB_neutrality_party_long:0 "조그 왕가"
  ALB_fascism_party:0 "PFSh"
- ALB_fascism_party_long:0 "Partia Fashiste e Shqipërisë"
- ALB_democratic_party:0 "Pavarur"
- ALB_democratic_party_long:0 "Pavarur"
+ ALB_fascism_party_long:0 "알바니아 파시스트당"
+ ALB_democratic_party:0 "알바니아 독립당"
+ ALB_democratic_party_long:0 "알바니아 독립당"
  ALB_communism_party:0 "PPSH"
- ALB_communism_party_long:0 "Partia e Punës e Shqipërisë"
+ ALB_communism_party_long:0 "알바니아 노동당"
  BOL_democratic_party:0 "PL"
- BOL_democratic_party_long:0 "Partido Liberal"
+ BOL_democratic_party_long:0 "볼리비아 자유당"
  BOL_fascism_party:0 "FSB"
- BOL_fascism_party_long:0 "Falange Socialista Boliviana"
+ BOL_fascism_party_long:0 "볼리비아 사회주의 팔랑헤당"
  BOL_neutrality_party:0 "QG"
- BOL_neutrality_party_long:0 "Quintanilla government"
+ BOL_neutrality_party_long:0 "셀레나 정부"
  NIC_democratic_party:0 "PLN"
- NIC_democratic_party_long:0 "Partido Liberal Nacionalista"
+ NIC_democratic_party_long:0 "국민 자유당"
  COS_democratic_party:0 "PR"
- COS_democratic_party_long:0 "Partido Republicano"
+ COS_democratic_party_long:0 "공화당"
  COS_communism_party:0 "PVP"
- COS_communism_party_long:0 "Partido Vanguardia Popular"
- ELS_fascism_party:0 "Pro-Patria"
- ELS_fascism_party_long:0 "Partido Nacional 'Pro-Patria'"
+ COS_communism_party_long:0 "전위인민당"
+ ELS_fascism_party:0 "국민당"
+ ELS_fascism_party_long:0 "조국 '국민'당"
  GUA_democratic_party:0 "PLP"
- GUA_democratic_party_long:0 "Progressive Liberal Party"
- SIA_neutrality_party:0 "Khana Ratsadon"
- SIA_neutrality_party_long:0 "Khana Ratsadon"
- URG_democratic_party:0 "Colorado"
- URG_democratic_party_long:0 "Partido Colorado"
+ GUA_democratic_party_long:0 "진보자유당"
+ SIA_neutrality_party:0 "카나라자돈"
+ SIA_neutrality_party_long:0 "카나라자돈"
+ URG_democratic_party:0 "콜로라도"
+ URG_democratic_party_long:0 "콜로라도 당"
  URG_communism_party:0 "PCU"
- URG_communism_party_long:0 "Partido Comunista del Uruguay"
+ URG_communism_party_long:0 "우루과이 공산당"
  VEN_fascism_party:0 "Consejo de Ministros"
  VEN_fascism_party_long:0 "Consejo de Ministros"
  VEN_neutrality_party:0 "AD"
