--- a/replace/parties_l_english.yml
+++ b/replace/parties_l_english.yml
@@ -281,13 +281,13 @@
  NOR_fascism_party:0 "NS"
  NOR_fascism_party_long:0 "국민연합"
  HOL_neutrality_party:1 "NVB"
- HOL_neutrality_party_long:1 "네덜란드 대중당"
+ HOL_neutrality_party_long:1 "네덜란드 민중운동"
  HOL_communism_party:0 "CPN"
  HOL_communism_party_long:0 "네덜란드 공산당"
  HOL_democratic_party:1 "ARP"
  HOL_democratic_party_long:1 "반혁명당"
  HOL_fascism_party:0 "NSB"
- HOL_fascism_party_long:1 "네덜란드 국가 사회 운동"
+ HOL_fascism_party_long:1 "네덜란드 국가사회운동"
  HOL_CHU_party:0 "CHU"
  HOL_CHU_party_long:0 "기독교역사연합"
  BEL_communism_party:0 "KPB"
