--- a/replace/loading_tips_l_english.yml
+++ b/replace/loading_tips_l_english.yml
@@ -275,77 +275,77 @@
      LOADING_TIP_271:0 "세계관 없이는 도덕성도 없다.\n- 볼레스와프 피아세키"
      LOADING_TIP_272:0 "농민들은 최악의 순간에도 땅, 종교, 국적을 유지했다. 이 세가지 가치로 인해 국가가 탄생하게 되었다.\n- 빈첸티 비토스"
      LOADING_TIP_273:0 "국가의 힘과 그 장래는 그 어떤 위대한 천재에 의해서도 보장되지 않을 것이다. 그것은 오로지 그들의 권리와 의무를 아는 온 국민에 의해서만 할 수 있다.\n- 빈첸티 비토스"
-     LOADING_TIP_274:0 "We must be very careful not to assign to this deliverance the attributes of a victory. Wars are not won by evacuations.\n- 윈스턴 처칠"
-     LOADING_TIP_275:0 "What is our policy? ... to wage war against a monstrous tyranny, never surpassed in the dark, lamentable catalogue of human crime.\n- 윈스턴 처칠"
-     LOADING_TIP_276:0 "Never in the field of human conflict was so much owed by so many to so few.\n- 윈스턴 처칠"
-     LOADING_TIP_277:0 "This is not the end. It is not even the beginning of an end. But it is, perhaps, the end of the beginning.\n- 윈스턴 처칠"
-     LOADING_TIP_278:0 "I have nothing to offer but blood, toil, tears and sweat.\n- 윈스턴 처칠"
-     LOADING_TIP_279:0 "Germany neither intends nor wishes to interfere in the internal affair of Austria, to annex Austria, or to conclude an Anschluss.\n- 아돌프 히틀러 (안슐루츠 3년 전)"
-     LOADING_TIP_280:0 "Today we rule Germany, tomorrow, the world.\n- 아돌프 히틀러"
-     LOADING_TIP_281:0 "It was close; but that's the way it is in war. You win or lose, live or die - and the difference is just an eyelash.\n- 더글러스 맥아더"
+     LOADING_TIP_274:0 "우리는 이 소식을 전할 때 승리의 속성을 부여하지 않도록 조심해야 한다. 전쟁은 후퇴로 이기는 것이 아니다.\n- 윈스턴 처칠"
+     LOADING_TIP_275:0 "우리의 정책은 무엇인가?...괴물 같은 폭정에 맞서는, 어둠에 결코 굴복하지 않는, 그리고 슬퍼해야 마땅한 인도에 반한 죄와 싸우는 전쟁이다. \n- 윈스턴 처칠"
+     LOADING_TIP_276:0 "인류의 분쟁의 영역에서 이토록 많은 사람들이 이토록 적은 사람들에게 이토록 큰 도움을 받은 적이 없다.\n- 윈스턴 처칠"
+     LOADING_TIP_277:0 "이것이 끝이 아닙니다. 끝의 시작조차도 아닙니다. 차라리 시작의 끝이라고 할 수 있겠습니다.\n- 윈스턴 처칠"
+     LOADING_TIP_278:0 "제가 여러분께 드릴 수 있는 것은 피와, 수고와, 눈물, 그리고 땀 뿐입니다.\n- 윈스턴 처칠"
+     LOADING_TIP_279:0 "독일은 오스트리아의 내정에 간섭하거나, 오스트리아를 합병하거나, 안슐루스를 체결할 의도도, 희망도 없다.\n- 아돌프 히틀러 (안슐루스 3년 전)"
+     LOADING_TIP_280:0 "오늘 우리는 독일을 통치할 것이며, 내일은 세계를 다스릴 것이다.\n- 아돌프 히틀러"
+     LOADING_TIP_281:0 "아슬아슬했다; 하지만 그것이 전쟁에서 일어나는 일이다. 이기든 지든 살든 죽든 차이는 눈곱만큼일 뿐이다.\n- 더글러스 맥아더"
      LOADING_TIP_282:0 "우리는 철수하는 것이 아니다 - 반대 방향으로 진격하는 것이다.\n- 더글러스 맥아더"
      LOADING_TIP_283:0 "승리의 대체제는 없다.\n- 더글러스 맥아더"
-     LOADING_TIP_284:0 "The eyes of the world are upon you. The hopes and prayers of liberty-loving people everywhere march with you.\n- Dwight D. Eisenhower June 6th, 1944"
-     LOADING_TIP_285:0 "The enemy must be annihilated before he reaches our main battlefield...We must stop him in the water...destroying all his equipment while it is still afloat.\n- Erwin Rommel"
-     LOADING_TIP_286:0 "Success is how high you bounce when you hit the bottom.\n- 조지 S. 패튼"
-     LOADING_TIP_287:0 "It is foolish and wrong to mourn the men who died. Rather we should thank God that such men lived.\n- 조지 S. 패튼"
-     LOADING_TIP_288:0 "Sure, we want to go home. We want this war over with. The quickest way to get it over with is to go get the bastards who started it. The quicker they are whipped, the quicker we can go home.\n- 조지 S. 패튼"
-     LOADING_TIP_289:0 "And when we get to Berlin, I am personally going to shoot that paper hanging son of a bitch Hitler. Just like I'd shoot a snake!\n- 조지 S. 패튼"
-     LOADING_TIP_290:0 "When you are sitting by the fireplace with your grandson and he asks you what you did in the great World War II... you can look him straight in the eye and say, Son, your Granddaddy rode with a Son-of-a-Goddamned-Bitch named Georgie Patton!\n- 조지 S. 패튼"
-     LOADING_TIP_291:0 "Hell is on us.\n- Mamoru Shigemitsu, Japanese Foreign Minister"
-     LOADING_TIP_292:0 "You cannot invade the mainland United States. There would be a rifle behind each blade of grass.\n- Admiral Isoroku Yamamoto"
-     LOADING_TIP_293:0 "I fear all we have done is awoken a sleeping giant and fill him with a terrible resolve.\n- Admiral Isoroku Yamamoto, after the attack on Pearl Harbour"
-     LOADING_TIP_294:0 "History knows no greater display of courage than that shown by the people of the Soviet Union.\n- Henry Stimson"
-     LOADING_TIP_295:0 "I know not with what weapons World War III will be fought, but World War IV will be fought with sticks and stones.\n- 알버트 아인슈타인"
-     LOADING_TIP_296:0 "Don't fire until you can see the whites of their eyes.\n- Major Devereux"
-     LOADING_TIP_297:0 "Casualties many; Percentage of dead not known; Combat efficiency; we are winning.\n- David M. Shoup"
-     LOADING_TIP_298:0 "In war, whichever side may call itself the victor, there are no winners, but all are losers.\n- 네빌 체임벌린"
-     LOADING_TIP_299:0 "And when he gets to Heaven, To St. Peter he will tell: One more Marine reporting, Sir - I've served my time in Hell.\n- Sgt. James A. Donahue"
-     LOADING_TIP_300:0 "We must be the great arsenal of Democracy.\n- 프랭클린 D. 루스벨트"
-     LOADING_TIP_301:0 "Never tell people how to do things. Tell them what to do and they will surprise you with their ingenuity.\n- 조지 S. 패튼"
+     LOADING_TIP_284:0 "세상의 눈이 제군들에게 쏠려 있다. 자유를 사랑하는 사람들의 희망과 기도가 자네들과 함께 행진한다.\n- 드와이트 D. 아이젠하워, 1944년 6월 6일"
+     LOADING_TIP_285:0 "적들은 주 전장에 도착하기 전에 전멸되어야만 한다... 우리는 그들을 물에서 막아야 한다... 그들의 장비가 여전히 떠있는 동안에.\n- 에르빈 롬멜"
+     LOADING_TIP_286:0 "성공이란 바닥을 쳤을 때 얼마나 높이 튕기는가를 말한다.\n- 조지 S. 패튼"
+     LOADING_TIP_287:0 "죽은 사람을 애도하는 것은 멍청하고 잘못된 것이다. 오히려 우리는 사람들이 살아남은 것을 신에 감사해야 한다.\n- 조지 S. 패튼"
+     LOADING_TIP_288:0 "물론, 우리는 집에 가고 싶다. 우리는 이 전쟁이 끝나기를 원한다. 가장 빨리 이짓거리를 끝내는 방법은 이걸 시작한 개새끼들을 족치러 가는거야. 그놈들이 죽도록 얻어 맞을수록, 우리는 집에 더 빨리 갈 수 있다.\n- 조지 S. 패튼"
+     LOADING_TIP_289:0 "베른린에 도착하면, 그 히틀러라는 개자식을 매달아논 종이를 내가 직접 쏠거야! 내가 뱀에게 쏘듯이 말이지!\n- 조지 S. 패튼"
+     LOADING_TIP_290:0 "20년 뒤 난롯가에서 손자를 무릎에 앉히고 손자가 "할아버지, 할아버지는 2차대전 때 뭐 했어요?' 라고 물어보면 손자를 당당한 눈빛으로 쳐다보며 말해주어라. "아가, 네 할애비는'조지 패튼이라는 빌어먹을 개새끼'와 함께 용맹하게 진군했단다!"\n- 조지 S. 패튼"
+     LOADING_TIP_291:0 "지옥이 도래했다.\n- 시게미쓰 마모루, 일본 외무대신"
+     LOADING_TIP_292:0 "너는 미국을 침략할 수 없다. 그곳에는 풀잎하나 마다 소총이 하나씩 있을 것이다.\n- 야마모토 이소로쿠 제독"
+     LOADING_TIP_293:0 "나는 우리가 한 모든 일이 잠자는 거인을 깨워 끔찍한 결심을 하게한것 아닌가 두렵다.\n- 야마모토 이소로쿠 제독, 진주만 공습 이후"
+     LOADING_TIP_294:0 "역사는 소련 사람들이 보여준것보다 더 큰 용기의 표현법을 가지지 않고 있다.\n- 헨리 스팀슨"
+     LOADING_TIP_295:0 "3차 세계대전의 무기가 무엇일지는 모르지만, 4차 세계대전의 무기는 막대기와 돌이 될 것임은 알고 있습니다.\n- 알버트 아인슈타인"
+     LOADING_TIP_296:0 "그들의 흰자위가 보일 때까지 발사하지 마라.\n- 데브뢰 소령"
+     LOADING_TIP_297:0 "사상자가 많다. 사망자 비율은 불명; 전투 효율성; 우리가 이기는 중이다.\n- 데이빗 M. 쇼프"
+     LOADING_TIP_298:0 "전쟁에서, 어느쪽이 승리자라고 해도, 승자는 없으며, 모두가 패배자이다.\n- 네빌 체임벌린"
+     LOADING_TIP_299:0 "그리고 그가 천국에 가면, 성 베드로에게 말할 것이다.: 또 한 명의 해병이 착임을 보고합니다,선생님! - 저는 지옥에서 근무했었습니다.\n- 제임스 A. 도나휴 병장"
+     LOADING_TIP_300:0 "우리는 거대한 민주주의 병기창이 되어야만 한다.\n- 프랭클린 D. 루스벨트"
+     LOADING_TIP_301:0 "절대로 사람들에게 어떻게 해야 하는지 말하지 마라. 그들에게 무엇을 해야 하는지 말하라. 그러면 그들은 독창성으로 당신들을 놀라게 할 것이다.\n- 조지 S. 패튼"
      LOADING_TIP_302:0 "신께서 내 적들에게 자비를 베푸시길. 왜냐면 난 아니거든.\n- 조지 S. 패튼"
      LOADING_TIP_303:0 "모두 같은 생각을 한다면, 몇몇은 생각이 없는 것이다.\n- 조지 S. 패튼"
-     LOADING_TIP_304:0 "We shall fight in France, we shall fight on the seas and the oceans, we shall fight with growing confidence and growing strength in the air, we shall defend our island, whatever the cost may be.\n- 윈스턴 처칠"
-     LOADING_TIP_305:0 "We shall fight on the beaches, we shall fight on the landing grounds, we shall fight in the fields and in the streets, we shall fight in the hills; we shall never surrender.\n- 윈스턴 처칠"
-     LOADING_TIP_306:0 "When I said that fighter-bombers had shot up my tanks with 40mm shells, the Reichsmarschall said: 'That's completely impossible. The Americans only know how to make razor blades.' I replied: 'We could do with some of those razor blades.'\n- Erwin Rommel"
-     LOADING_TIP_307:0 "I have seen war... I hate war.\n- 프랭클린 D. 루스벨트"
-     LOADING_TIP_308:0 "Like so many of our people, we have now had a personal experience of the German barbarity which only strengthens the resolution of all of us to fight through to final victory.\n- King George VI"
-     LOADING_TIP_309:0 "They sowed the wind, and now they are going to reap the whirlwind.\n- Arthur 'Bomber' Harris"
-     LOADING_TIP_310:0 "A victory at Kursk would shine like a beacon to the world!\n- 아돌프 히틀러"
-     LOADING_TIP_311:0 "The Mediterranean will be turned into an Italian lake.\n- 베니토 무솔리니"
-     LOADING_TIP_312:0 "The world must know what happened, and never forget.\n- Dwight E. Eisenhower"
-     LOADING_TIP_313:0 "It takes twenty years or more of peace to make a man; it takes only twenty seconds of war to destroy him.\n- Baudouin I"
-     LOADING_TIP_314:0 "Never underestimate a man who overestimates himself.\n- 프랭클린 D. 루스벨트"
-     LOADING_TIP_315:0 "The quicker we clean up this Goddamned mess, the quicker we can take a little jaunt against the purple pissing Japs and clean out their nest, too. Before the Goddamned Marines get all of the credit.\n- 조지 S. 패튼"
-     LOADING_TIP_316:0 "Before we're through with 'em, the Japanese language will be spoken only in hell.\n- Admiral Halsey"
-     LOADING_TIP_317:0 "The gallantry and aggressive fighting spirit of the Russian soldiers command the American army's admiration.\n- George C. Marshall"
-     LOADING_TIP_318:0 "I do not love the bright sword for its sharpness, nor the arrow for its swiftness, nor the warrior for his glory. I love only that which they defend.\n- J.R.R. Tolkien"
+     LOADING_TIP_304:0 "우리는 프랑스에서 싸울 것입니다. 우리는 바다와 대양에서 싸울 것입니다. 우리는 자신감과 힘을 길러 하늘에서 싸울 것입니다. 우리는 어떤 대가를 치르더라도 영국을 지켜 낼 것입니다. \n- 윈스턴 처칠"
+     LOADING_TIP_305:0 "우리는 해변에서 싸울 것입니다. 우리는 상륙지점에서 싸울 것입니다. 우리는 들판과 거리에서 싸울 것입니다. 우리는 언덕에서 싸울 것입니다. 우리는 절대로 항복하지 않을 것입니다!\n- 윈스턴 처칠"
+     LOADING_TIP_306:0 "내가 전투폭격기가 내 전차를 40mm탄으로 쐈다고 말했을때, 제국원수는 말했다: '그건 완전히 불가능하다. 미국인들은 면도날 만드는 법만 안다.' 나는 대답했다: '우리도 그 면도날 중 일부를 쓰는데요 '\n- 에르빈 롬멜"
+     LOADING_TIP_307:0 "나는 전쟁을 보았다... 나는 전쟁을 혐오한다.\n- 프랭클린 D. 루스벨트"
+     LOADING_TIP_308:0 "우리 국민들 중 다수가 그렇듯이, 우리는 이제 최후의 승리를 위한 모두의 결의를 강화시키는 독일의 야만성에 대한 개인적인 경험을 했다.\n- 조지 6세"
+     LOADING_TIP_309:0 "그들은 바람을 뿌렸고, 이제 회오리 바람을 거두려 한다.\n- 아서 '폭격기' 해리스"
+     LOADING_TIP_310:0 "쿠르스크에서의 승리는 세상을 향한 봉화처럼 빛날 것이다!\n- 아돌프 히틀러"
+     LOADING_TIP_311:0 "지중해는 이탈리아의 호수가 될 것이다.\n- 베니토 무솔리니"
+     LOADING_TIP_312:0 "세상은 무슨 일이 일어났는지 반드시 알아야하고, 결코 잊지 말아야 한다.\n- 드와이트 E. 아이젠하워"
+     LOADING_TIP_313:0 "사람을 만드는 데는 20년 혹은 그 이상의 평화가 필요하다. 그를 파괴하는 데는 불과 20초간의 전쟁만 필요하다.\n- 보두앵 1세"
+     LOADING_TIP_314:0 "자신을 과대평가하는 사람을 결코 과소평가하지 마라.\n- 프랭클린 D. 루스벨트"
+     LOADING_TIP_315:0 "우리가 이 빌어먹을 난장판을 빨리 치울수록, 보라색 오줌을 싸는 잽을 조금이라도 더 빨리 쫓아가 그들의 둥지를 청소할 수 있다. 빌어먹을 해병대가 모든 공을 차지하기 전에 말이야\n- 조지 S. 패튼"
+     LOADING_TIP_316:0 "이 전쟁이 끝나면, 일본어는 지옥에서나 쓰는 언어가 될 것이다.\n- 홀시 제독"
+     LOADING_TIP_317:0 "러시아 군인들의 용맹함과 공격적인 투지는 미군을 감탄시켰다.\n- 조지 C. 마셜"
+     LOADING_TIP_318:0 "나는 밝은 검이 날카롭다고 해서 사랑하지도 않고, 화살이 재빠르다고 사랑하지 않으며,영광이 있다고 전사를 사랑하지 않는다. 나는 그들이 지키고자 하는 것만을 사랑한다.\n- J.R.R. 톨킨"
      LOADING_TIP_319:0 "이제 나는 죽음, 세계의 파괴자가 되었다."
-     LOADING_TIP_320:0 "They're on our left, they're on our right, they're in front of us, they're behind us... they can't get away this time.\n- Lewis B. 'Chesty' Puller"
+     LOADING_TIP_320:0 "그들은 우리 왼쪽에 있고, 그들은 우리 오른쪽에 있고, 그들은 우리 앞에 있고, 그들은 우리 뒤에 있다. 그들은 이번엔 도망칠 수 없다.\n- 루이스 B. '체스티' 풀러"
      LOADING_TIP_321:0 "천황 폐하를 위해 죽으면 영생을 살 것이다.\n- 일본 군대 표어"
-     LOADING_TIP_322:0 "Germany wants peace because of its fundamental convictions... The principal effect of every war is to destroy the flower of the nation... Germany needs peace and desires peace!\n- 아돌프 히틀러, 1935"
-     LOADING_TIP_323:0 "Don't tell people how to do things, tell them what to do and let them surprise you with the results.\n- 조지 S. 패튼"
-     LOADING_TIP_324:0 "The true soldier fights not because he hates what is in front of him, but because he loves what is behind him.\n- G. K. Chesterton"
-     LOADING_TIP_325:0 "Dad, how do soldiers killing each other solve the world's problems?\n- Bill Watterson, Calvin and Hobbes"
-     LOADING_TIP_326:0 "Whenever I think of this Attack, my stomach turns over.\n 아돌프 히틀러 speaking to 하인츠 구데리안 before the Battle of Kursk"
-     LOADING_TIP_327:0 "Force is the only language they understand, like bullies.\n- 프랭클린 D. 루스벨트"
-     LOADING_TIP_328:0 "I have seen war...I hate war.\n- 프랭클린 D. 루스벨트"
-     LOADING_TIP_329:0 "It was my view that no kill was worth the life of a wingman...Pilots in my unit who lost wingmen on this basis were prohibited from leading a section. They were made to fly as a wingman, instead.\n- Erich Hartmann"
-     LOADING_TIP_330:0 "Dictators free themselves but they enslave the people. \n- Charlie Chaplin"
-     LOADING_TIP_331:0 "Conscription if necessary, but not necessarily conscription. \n- Mackenzie King"
-     LOADING_TIP_332:0 "Where there is little or no public opinion, there is likely to be bad government, which sooner or later becomes autocratic government. \n- Mackenzie King"
-     LOADING_TIP_333:0 "It is never right to commit evil, even to avoid greater evils. \n- Francisco De Vitoria"
-     LOADING_TIP_334:0 "...enlargment of empire cannot be a cause of a just war. \n- Francisco De Vitoria"
+     LOADING_TIP_322:0 "독일은 근본적인 신념 때문에 평화를 원한다... 모든 전쟁의 주된 효과는 나라의 꽃을 파괴하는 것이다... 독일은 평화를 원하고 평화를 요구한다!\n- 아돌프 히틀러, 1935"
+     LOADING_TIP_323:0 "절대로 사람들에게 어떻게 해야 하는지 말하지 마라. 그들에게 무엇을 해야 하는지 말하라. 그러면 결과로 당신들을 놀라게 할 것이다.\n- 조지 S. 패튼"
+     LOADING_TIP_324:0 "진정한 병사는 앞에 있는 것을 싫어해서가 아니라 뒤에 있는 것을 사랑하기 때문에 싸운다.\n- G. K. 체스터턴"
+     LOADING_TIP_325:0 "아빠, 병사들끼리 서로 죽이는 게 세상의 문제를 어떻게 해결해요?\n- 빌 워터슨, 캘빈과 홉스"
+     LOADING_TIP_326:0 "이 공격을 생각할 때마다 위가 뒤집힌다.\n 아돌프 히틀러가 하인츠 구데리안에게 쿠르스크 전투전에 한 말"
+     LOADING_TIP_327:0 "힘은 그들의 이해하는 유일한 언어다. 마치 폭력배 처럼.\n- 프랭클린 D. 루스벨트"
+     LOADING_TIP_328:0 "나는 전쟁을 보았다... 나는 전쟁을 혐오한다.\n- 프랭클린 D. 루스벨트"
+     LOADING_TIP_329:0 "어떤 살인도 윙맨의 목숨보다 가치가 없다는 것이 내 견해였다...우리 부대의 조종사들은 이런 이유로 비행사들을 잃는 것이 금지되었다. 그들은 대신 윙맨으로써 날았다.\n- 에리히 하르트만"
+     LOADING_TIP_330:0 "독재자들은 스스로는 자유롭지만 사람들을 노예로 만든다.\n- 찰리 채플린"
+     LOADING_TIP_331:0 "필요하다면 징병해야 하지만, 필요없다면 징병하지 말아야 한다. \n- 맥캔지 킹"
+     LOADING_TIP_332:0 "여론이 거의 없거나 아예 없는 곳에는 나쁜 정부가 있을 가능성이 높고, 조만간 독재정권이 된다. \n- 맥캔지 킹"
+     LOADING_TIP_333:0 "더 큰 악을 무찌르기 위해서라도 악과 손을 잡아서는 안된다. \n- 프란시스코 드 비토리아"
+     LOADING_TIP_334:0 "...제국의 확대는 정당한 전쟁의 이유가 될 수 없다. \n- 프란시스코 드 비토리아"
      LOADING_TIP_335:0 "전쟁은 장비, 야포, 지상군, 공군의 문제만이 아니다. 정신과 도덕이 큰 부분을 차지한다. \n- 장제스"
-     LOADING_TIP_341:0 "The old Lie; Dulce et Decorum est Pro patria mori. ('It is sweet and proper to die for one's country.') \n- Wilfred Owen"
-     LOADING_TIP_342:0 "'And it was not we who set the example, for it has always been the law that the weaker should be subject to the stronger.' \n- Quote attributed to a unamed Athenian Enovy to Sparta by Thucydides"
-     LOADING_TIP_343:0 "'Again, your country has a right to your services in sustaining the glories of her position!' \n- Quote attributed to Pericles by Thucydides"
-     LOADING_TIP_344:0 "'You cannot decline the burdens of empire and still expect to share it's honors. \n- Quote attributed to Pericles by Thucydides"
-     LOADING_TIP_345:0 "'Hope, (is) danger's comforter, (it) may be (only) inulged in by those who have abundant resources... \n- Quote attributed to unamed Athenian Enovy to Melian by Thucydides"     
+     LOADING_TIP_341:0 "오랜 거짓말; Dulce et Decorum est Pro patria mori. ('조국을 위해 죽는 것은 적절하며 달콤하다.') \n- 윌프레드 오언"
+     LOADING_TIP_342:0 "'그리고 그 모범을 보인 것은 우리가 아니었다. 왜냐하면 약한 자는 강한 자에게 복종해야 한다는 것이 항상 법칙이었기 때문이다.' \n- 무명의 아테네 사절이 스파르타에게, 투키디데스가 기록함"
+     LOADING_TIP_343:0 "'다시 말해, 당신들의 나라는 그녀가 누리고 있는 영광의 자리를 차지할 권리가 있습니다!' \n- 페리클레스, 투기디데스가 기록함"
+     LOADING_TIP_344:0 "'당신은 제국의 짐을 거절할 수 없고,제국의 명예를 나누기를 기대할 수도 없다. \n- 페리클레스, 투기디데스가 기록함"
+     LOADING_TIP_345:0 "'희망, (은) 위험한 위안을 주는 이요, (그것은) 어쩌면 (오로지) 풍부한 부를 가진 이만 가질 수 있는 것이오... \n- 페리클레스, 투기디데스가 기록함"     
 # Patreon
         LOADING_TIP_336:0 "폴란드는 아직 죽지 않았다. \n- 마주레크 동브로프스키에고"
         LOADING_TIP_337:0 "내가 가난한 이들에게 먹을 것을 주면 사람들은 나를 성인이라 부르고, 내가 가난한 이들은 왜 먹을 것이 없는지 물으면 사람들은 나를 공산주의자라고 부른다.\n- 엘데르 카마라"
-        LOADING_TIP_338:0 "You have no oath registered in heaven to destroy the Government, while I shall have the most solemn one to 'preserve, protect, and defend it.' \n- 에이브러햄 링컨"
+        LOADING_TIP_338:0 "당신들은 정부를 파괴하기 위해 하느님께 맹세하지 않았지만 저는 정부를'보존하고, 보호하고, 지킬것을' 엄숙히 맹세했습니다. \n- 에이브러햄 링컨"
         LOADING_TIP_339:0 "...하지만 춥고 비오는 밤에 그가 할 수 있을까? \n- 윈스턴 처칠"
         LOADING_TIP_340:0 "펜을 든다는 것은 전쟁을 한다는 것이다. \n- 볼테르"
 
