--- a/replace/loading_tips_l_english.yml
+++ b/replace/loading_tips_l_english.yml
@@ -45,7 +45,7 @@
      LOADING_TIP_42:0 "미국 및 영국과 전쟁을 시작하면 처음 6~12개월 동안은 산 속으로 튈 것이다. 그리고 그 후에는, 생일 카드를 받을지 장담할 수 없다.\n- 야마모토 이소로쿠"
      LOADING_TIP_43:0 "설령 술통을 만났다 해도, 우리의 보병은 아무 것도 없는 것처럼 공격할 것이다.\n- 게오르기 주코프"
      LOADING_TIP_44:0 "거상의 그림자는 도저히 헤아릴 수가 없다... 사단 12개를 쳐부술 때마다 또 다른 사단 12개가 나타난다.\n- 프란츠 할더"
-     LOADING_TIP_45:0 "독일 사령관에게: 땅콩!\n미국 사령관\n- 안소니 매컬리피 (독일의 항복 요구에 대한 답변)"
+     LOADING_TIP_45:0 "독일 사령관에게: 좆까!\n미국 사령관\n- 안소니 매컬리피 (독일의 항복 요구에 대한 답변)"
      LOADING_TIP_46:0 "오늘 우리에게 일어난 일이 목요일에 너희에게 일어날 수도 있다.\n- 하일레 셀라시에 1세 (1936년)"
      LOADING_TIP_47:0 "단 한 발짝도 뒤로 가지 마! 싫음 말구\n- 소비에트 명령 제 227호"
      LOADING_TIP_48:0 "아이스크림! 샐러드! 머핀!\n-후치다 미쓰오 (1941년 12월 7일)"
