--- a/replace/victory_points_l_english.yml
+++ b/replace/victory_points_l_english.yml
@@ -1,110 +1,110 @@
 ﻿l_english:
  VICTORY_POINTS_TOOLTIP:0 "§G$NAME$§! victory points = §Y$POINTS$§!"
- VICTORY_POINTS_6521:0 "Berlin"
- VICTORY_POINTS_692:0 "Munich"
- VICTORY_POINTS_6469:0 "Essen"
- VICTORY_POINTS_9347:0 "Hamburg"
- VICTORY_POINTS_9570:0 "Breslau"
- VICTORY_POINTS_241:0 "Wilhelmshaven"
- VICTORY_POINTS_321:0 "Rostock"
- VICTORY_POINTS_514:0 "Dresden"
- VICTORY_POINTS_587:0 "Köln"
- VICTORY_POINTS_3326:0 "Bremen"
- VICTORY_POINTS_3522:0 "Magdeburg"
- VICTORY_POINTS_3535:0 "Leipzig"
- VICTORY_POINTS_6282:0 "Stettin"
- VICTORY_POINTS_6332:0 "Königsberg"
- VICTORY_POINTS_6377:0 "Hannover"
- VICTORY_POINTS_6389:0 "Kiel"
- VICTORY_POINTS_6488:0 "Frankfurt"
- VICTORY_POINTS_9517:0 "Stuttgart"
- VICTORY_POINTS_11544:0 "Nuremberg"
- VICTORY_POINTS_6287:0 "Copenhagen"
- VICTORY_POINTS_3325:0 "Odense"
- VICTORY_POINTS_6364:0 "Aarhus"
- VICTORY_POINTS_3544:0 "Warsaw"
- VICTORY_POINTS_9427:0 "Krakow"
- VICTORY_POINTS_362:0 "Danzig"
- VICTORY_POINTS_3320:0 "Wilno"
- VICTORY_POINTS_3392:0 "Brzesc Litewski"
- VICTORY_POINTS_3393:0 "Grodno"
- VICTORY_POINTS_6558:0 "Poznań"
- VICTORY_POINTS_9508:0 "Łódź"
- VICTORY_POINTS_11479:0 "Lwów"
- VICTORY_POINTS_11666:0 "Vienna"
- VICTORY_POINTS_673:0 "Innsbruck"
- VICTORY_POINTS_688:0 "Salzburg"
- VICTORY_POINTS_9648:0 "Graz"
- VICTORY_POINTS_11542:0 "Prague"
- VICTORY_POINTS_3569:0 "Brno"
- VICTORY_POINTS_6418:0 "Plzen"
- VICTORY_POINTS_6573:0 "Kosice"
- VICTORY_POINTS_9692:0 "Bratislava"
- VICTORY_POINTS_9660:0 "Budapest"
- VICTORY_POINTS_11610:0 "Pecs"
- VICTORY_POINTS_11659:0 "Debrecen"
- VICTORY_POINTS_391:0 "Amsterdam"
- VICTORY_POINTS_3211:0 "The Hague"
- VICTORY_POINTS_9498:0 "Rotterdam"
- VICTORY_POINTS_6496:0 "Eindhoven"
- VICTORY_POINTS_516:0 "Brussel-Bruxelles"
- VICTORY_POINTS_3516:0 "Namur"
- VICTORY_POINTS_6560:0 "Gent"
- VICTORY_POINTS_6598:0 "Antwerpen"
- VICTORY_POINTS_11519:0 "Liége"
- VICTORY_POINTS_6583:0 "Luxemburg"
- VICTORY_POINTS_11506:0 "Paris"
- VICTORY_POINTS_6613:0 "Lyon"
- VICTORY_POINTS_9737:0 "Bordeaux"
- VICTORY_POINTS_11834:0 "Marseille"
- VICTORY_POINTS_575:0 "Dunkerque"
- VICTORY_POINTS_620:0 "Limoges"
- VICTORY_POINTS_678:0 "Mulhouse"
- VICTORY_POINTS_512:0 "Orleans"
- VICTORY_POINTS_3552:0 "Brest"
- VICTORY_POINTS_3594:0 "Vichy"
- VICTORY_POINTS_3652:0 "Dijon"
- VICTORY_POINTS_3671:0 "Tours"
- VICTORY_POINTS_3768:0 "Grenoble"
- VICTORY_POINTS_6449:0 "Cherbourg"
- VICTORY_POINTS_6536:0 "Lorient"
- VICTORY_POINTS_6657:0 "La Rochelle"
- VICTORY_POINTS_6766:0 "Toulouse"
- VICTORY_POINTS_9434:0 "Le Havre"
- VICTORY_POINTS_9490:0 "Troyes"
- VICTORY_POINTS_9495:0 "Rennes"
- VICTORY_POINTS_9503:0 "Strasbourg"
- VICTORY_POINTS_9559:0 "Metz"
- VICTORY_POINTS_9642:0 "Besancon"
- VICTORY_POINTS_9898:0 "Montpellier"
- VICTORY_POINTS_9909:0 "Nice"
- VICTORY_POINTS_11465:0 "Nantes"
- VICTORY_POINTS_11483:0 "Lille"
- VICTORY_POINTS_11516:0 "Nancy"
- VICTORY_POINTS_11548:0 "Calais"
- VICTORY_POINTS_11563:0 "Rouen"
- VICTORY_POINTS_13011:0 "Reims"
- VICTORY_POINTS_9620:0 "Berne"
- VICTORY_POINTS_663:0 "Zürich"
- VICTORY_POINTS_11586:0 "Belgrade"
- VICTORY_POINTS_3882:0 "Skopje"
- VICTORY_POINTS_3924:0 "Split"
- VICTORY_POINTS_9627:0 "Ljubljana"
- VICTORY_POINTS_11581:0 "Zagreb"
- VICTORY_POINTS_11899:0 "Sarajevo"
- VICTORY_POINTS_949:0 "Sofia"
- VICTORY_POINTS_6923:0 "Plovdiv"
- VICTORY_POINTS_9783:0 "Varna"
- VICTORY_POINTS_9617:0 "Bucharest"
- VICTORY_POINTS_690:0 "Brasov"
- VICTORY_POINTS_3663:0 "Ploiesti"
- VICTORY_POINTS_6682:0 "Arad"
- VICTORY_POINTS_6711:0 "Cluj"
- VICTORY_POINTS_9716:0 "Iasi"
- VICTORY_POINTS_9914:0 "Tirana"
- VICTORY_POINTS_4109:0 "Athens"
- VICTORY_POINTS_9940:0 "Heraklion"
- VICTORY_POINTS_11818:0 "Thessaloniki"
+ VICTORY_POINTS_6521:0 "베를린"
+ VICTORY_POINTS_692:0 "뮌헨"
+ VICTORY_POINTS_6469:0 "에센"
+ VICTORY_POINTS_9347:0 "함부르크"
+ VICTORY_POINTS_9570:0 "브레슬라우"
+ VICTORY_POINTS_241:0 "빌헬름스하펜"
+ VICTORY_POINTS_321:0 "로스토크"
+ VICTORY_POINTS_514:0 "드레스덴"
+ VICTORY_POINTS_587:0 "쾰른"
+ VICTORY_POINTS_3326:0 "브레멘"
+ VICTORY_POINTS_3522:0 "마그데부르크"
+ VICTORY_POINTS_3535:0 "라이프치히"
+ VICTORY_POINTS_6282:0 "슈테틴"
+ VICTORY_POINTS_6332:0 "쾨니히스베르크"
+ VICTORY_POINTS_6377:0 "하노버"
+ VICTORY_POINTS_6389:0 "킬"
+ VICTORY_POINTS_6488:0 "프랑크푸르트"
+ VICTORY_POINTS_9517:0 "슈투트가르트"
+ VICTORY_POINTS_11544:0 "뉘른베르크"
+ VICTORY_POINTS_6287:0 "코펜하겐"
+ VICTORY_POINTS_3325:0 "오덴세"
+ VICTORY_POINTS_6364:0 "오르후스"
+ VICTORY_POINTS_3544:0 "바르샤바"
+ VICTORY_POINTS_9427:0 "크라쿠프"
+ VICTORY_POINTS_362:0 "단치히"
+ VICTORY_POINTS_3320:0 "빌노"
+ VICTORY_POINTS_3392:0 "브레스트"
+ VICTORY_POINTS_3393:0 "흐로드나"
+ VICTORY_POINTS_6558:0 "포즈난"
+ VICTORY_POINTS_9508:0 "우치"
+ VICTORY_POINTS_11479:0 "리비우"
+ VICTORY_POINTS_11666:0 "빈"
+ VICTORY_POINTS_673:0 "인스부르크"
+ VICTORY_POINTS_688:0 "잘츠부르크"
+ VICTORY_POINTS_9648:0 "그라츠"
+ VICTORY_POINTS_11542:0 "프라하"
+ VICTORY_POINTS_3569:0 "브르노"
+ VICTORY_POINTS_6418:0 "플젠"
+ VICTORY_POINTS_6573:0 "코시체"
+ VICTORY_POINTS_9692:0 "브라티슬라바"
+ VICTORY_POINTS_9660:0 "부다페스트"
+ VICTORY_POINTS_11610:0 "페치"
+ VICTORY_POINTS_11659:0 "데브레첸"
+ VICTORY_POINTS_391:0 "암스테르담"
+ VICTORY_POINTS_3211:0 "헤이그"
+ VICTORY_POINTS_9498:0 "로테르담"
+ VICTORY_POINTS_6496:0 "아른험"
+ VICTORY_POINTS_516:0 "브뤼셀"
+ VICTORY_POINTS_3516:0 "나뮈르"
+ VICTORY_POINTS_6560:0 "헨트"
+ VICTORY_POINTS_6598:0 "안트베르펜"
+ VICTORY_POINTS_11519:0 "리에주"
+ VICTORY_POINTS_6583:0 "룩셈부르크"
+ VICTORY_POINTS_11506:0 "파리"
+ VICTORY_POINTS_6613:0 "리옹"
+ VICTORY_POINTS_9737:0 "보르도"
+ VICTORY_POINTS_11834:0 "마르세유"
+ VICTORY_POINTS_575:0 "덩케르크"
+ VICTORY_POINTS_620:0 "리모주"
+ VICTORY_POINTS_678:0 "뮐루즈"
+ VICTORY_POINTS_512:0 "오를레앙"
+ VICTORY_POINTS_3552:0 "브레스트"
+ VICTORY_POINTS_3594:0 "비시"
+ VICTORY_POINTS_3652:0 "디종"
+ VICTORY_POINTS_3671:0 "투르"
+ VICTORY_POINTS_3768:0 "그르노블"
+ VICTORY_POINTS_6449:0 "셰르부르"
+ VICTORY_POINTS_6536:0 "로리앙"
+ VICTORY_POINTS_6657:0 "라로셸"
+ VICTORY_POINTS_6766:0 "툴루즈"
+ VICTORY_POINTS_9434:0 "르아브르"
+ VICTORY_POINTS_9490:0 "트루아"
+ VICTORY_POINTS_9495:0 "렌"
+ VICTORY_POINTS_9503:0 "스트라스부르"
+ VICTORY_POINTS_9559:0 "메츠"
+ VICTORY_POINTS_9642:0 "브장송"
+ VICTORY_POINTS_9898:0 "몽펠리에"
+ VICTORY_POINTS_9909:0 "니스"
+ VICTORY_POINTS_11465:0 "낭트"
+ VICTORY_POINTS_11483:0 "릴"
+ VICTORY_POINTS_11516:0 "낭시"
+ VICTORY_POINTS_11548:0 "칼레"
+ VICTORY_POINTS_11563:0 "루앙"
+ VICTORY_POINTS_13011:0 "랭스"
+ VICTORY_POINTS_9620:0 "베른"
+ VICTORY_POINTS_663:0 "취리히"
+ VICTORY_POINTS_11586:0 "베오그라드"
+ VICTORY_POINTS_3882:0 "스코페"
+ VICTORY_POINTS_3924:0 "스플리트"
+ VICTORY_POINTS_9627:0 "류블랴나"
+ VICTORY_POINTS_11581:0 "자그레브"
+ VICTORY_POINTS_11899:0 "사라예보"
+ VICTORY_POINTS_949:0 "소피아"
+ VICTORY_POINTS_6923:0 "플로브디프"
+ VICTORY_POINTS_9783:0 "바르나"
+ VICTORY_POINTS_9617:0 "부쿠레슈티"
+ VICTORY_POINTS_690:0 "브라쇼브"
+ VICTORY_POINTS_3663:0 "플로이에슈티"
+ VICTORY_POINTS_6682:0 "아라드"
+ VICTORY_POINTS_6711:0 "클루지"
+ VICTORY_POINTS_9716:0 "이아시"
+ VICTORY_POINTS_9914:0 "티라나"
+ VICTORY_POINTS_4109:0 "아테네"
+ VICTORY_POINTS_9940:0 "헤라클리온"
+ VICTORY_POINTS_11818:0 "테살로니키"
  VICTORY_POINTS_11747:0 "Ankara"
  VICTORY_POINTS_9833:0 "Istanbul"
  VICTORY_POINTS_940:0 "Konya"
