--- a/replace/parties_l_english.yml
+++ b/replace/parties_l_english.yml
@@ -260,7 +260,7 @@
  SAF_neutrality_party_long:0 "아프리카 국민회의"
  SAF_communism_party:0 "SACP"
  SAF_communism_party_long:0 "남아프리카 공산당"
- SAF_democratic_party:0 "United"
+ SAF_democratic_party:0 "통합당"
  SAF_democratic_party_long:0 "남아프리카 통합당"
  SAF_fascism_party:0 "GNP"
  SAF_fascism_party_long:0 "정화국민당"
@@ -319,7 +319,7 @@
  COL_communism_party_long:0 "콜롬비아 공산당"
  COL_democratic_party:0 "PLC"
  COL_democratic_party_long:0 "콜롬비아 자유당"
- COL_neutrality_party:0 "Conservador"
+ COL_neutrality_party:0 "보수당"
  COL_neutrality_party_long:0 "콜롬비아 보수당"
  CZE_communism_party:0 "KSC"
  CZE_communism_party_long:0 "체코슬로바키아 공산당"
@@ -360,186 +360,186 @@
  GUA_democratic_party_long:0 "진보자유당"
  SIA_neutrality_party:0 "카나라자돈"
  SIA_neutrality_party_long:0 "카나라자돈"
- URG_democratic_party:0 "콜로라도"
- URG_democratic_party_long:0 "콜로라도 당"
+ URG_democratic_party:0 "콜로라도당"
+ URG_democratic_party_long:0 "국민공화협회"
  URG_communism_party:0 "PCU"
  URG_communism_party_long:0 "우루과이 공산당"
- VEN_fascism_party:0 "Consejo de Ministros"
- VEN_fascism_party_long:0 "Consejo de Ministros"
+ VEN_fascism_party:0 "장관 의회"
+ VEN_fascism_party_long:0 "장관 의회"
  VEN_neutrality_party:0 "AD"
- VEN_neutrality_party_long:0 "Acción Democrática"
- VEN_democratic_party:0 "Copei"
- VEN_democratic_party_long:0 "Copei"
+ VEN_neutrality_party_long:0 "민주행동당"
+ VEN_democratic_party:0 "코페이"
+ VEN_democratic_party_long:0 "사회기독당"
  VEN_communism_party:0 "PCV"
- VEN_communism_party_long:0 "Partido Comunista de Venezuela"
+ VEN_communism_party_long:0 "베네수엘라 공산당"
  PRU_democratic_party:0 "CC"
- PRU_democratic_party_long:0 "Coalición Conservadora"
- PRU_fascism_party:0 "Unión Revolucionaria"
- PRU_fascism_party_long:0 "Unión Revolucionaria"
+ PRU_democratic_party_long:0 "연정"
+ PRU_fascism_party:0 "혁명연합"
+ PRU_fascism_party_long:0 "혁명연합"
  PRU_communism_party:0 "PCP"
- PRU_communism_party_long:0 "Partido Comunista del Perú"
- IRE_democratic_party:0 "Fianna Fáil"
- IRE_democratic_party_long:0 "Fianna Fáil, The Republican Party"
+ PRU_communism_party_long:0 "페루 공산당"
+ IRE_democratic_party:0 "피어너팔"
+ IRE_democratic_party_long:0 "피어너팔, 공화당"
  IRE_fascism_party:0 "PNC"
- IRE_fascism_party_long:0 "Páirtí Náisiúnta Corparáidíoch"
+ IRE_fascism_party_long:0 "국가공동당"
  IRE_communism_party:0 "CPI"
- IRE_communism_party_long:0 "Páirtí Cumannach na hÉireann"
- IRE_neutrality_party:0 "Lucht Oibre"
- IRE_neutrality_party_long:0 "Páirtí an Lucht Oibre"
- AFG_neutrality_party:0 "Barakzai"
- AFG_neutrality_party_long:0 "Barakzai royal family"
- LUX_democratic_party:0 "Rietspartei"
+ IRE_communism_party_long:0 "아일랜드 공산당"
+ IRE_neutrality_party:0 "노동당"
+ IRE_neutrality_party_long:0 "아일랜드 노동당"
+ AFG_neutrality_party:0 "바락자이 왕조"
+ AFG_neutrality_party_long:0 "바락자이 왕조"
+ LUX_democratic_party:0 "우파당"
  LUX_communism_party:0 "KPL"
- LUX_communism_party_long:0 "Kommunistesch Partei Lëtzebuerg"
+ LUX_communism_party_long:0 "룩셈부르크 공산당"
  LUX_fascism_party:0 "PNI"
- LUX_fascism_party_long:0 "Onofhängeg Nationalpartei"
- BHU_neutrality_party:0 "Wangchuk Dynasty"
+ LUX_fascism_party_long:0 "독립국가당"
+ BHU_neutrality_party:0 "왕축 왕조"
  SLO_fascism_party:0 "HSLS"
- SLO_fascism_party_long:0 "Hlinkova Slovenská Ludová Strana"
+ SLO_fascism_party_long:0 "슬로바키아 인민당"
  SLO_communism_party:0 "KSS"
- SLO_communism_party_long:0 "Komunistická strana Slovenska"
- ECU_democratic_party:0 "Ecuador"
- ECU_democratic_party_long:0 "República del Ecuador"
+ SLO_communism_party_long:0 "슬로바키아 공산당"
+ ECU_democratic_party:0 "에콰도르 공화당"
+ ECU_democratic_party_long:0 "에콰도르 공화당"
  ECU_communism_party:0 "PCE"
- ECU_communism_party_long:0 "Partido Comunista del Ecuador"
+ ECU_communism_party_long:0 "에콰도르 공산당"
  HON_democratic_party:0 "PLH"
  HON_communism_party:0 "PCH"
- HON_communism_party_long:0 "Partido Comunista de Honduras"
- NEP_neutrality_party:0 "Rana Dynasty"
+ HON_communism_party_long:0 "온두라스 공산당"
+ NEP_neutrality_party:0 "라나 왕조"
  PAN_democratic_party:0 "PLD"
- PAN_democratic_party_long:0 "Partido Liberal Doctrinario"
+ PAN_democratic_party_long:0 "독립 자유당"
  PAN_communism_party:0 "PPP"
- PAN_communism_party_long:0 "Partido del Pueblo de Panamá"
- PHI_fascism_party:0 "Ganap"
- PHI_fascism_party_long:0 "Ganap Party"
+ PAN_communism_party_long:0 "파나마 인민당"
+ PHI_fascism_party:0 "가납"
+ PHI_fascism_party_long:0 "가납당"
  PHI_democratic_party:0 "NP"
- PHI_democratic_party_long:0 "Partido Nacionalista"
+ PHI_democratic_party_long:0 "필리핀 국민당"
  PHI_communism_party:0 "PKP"
- PHI_communism_party_long:0 "Partido Komunista ng Pilipinas"
- SAU_neutrality_party:0 "House of Saud"
- YEM_neutrality_party:0 "House of Rassid"
- OMA_neutrality_party:0 "Al Said Dynasty"
+ PHI_communism_party_long:0 "필리핀 공산당"
+ SAU_neutrality_party:0 "사우드 왕가"
+ YEM_neutrality_party:0 "라시드 왕조"
+ OMA_neutrality_party:0 "알 사이드 왕조"
  SIK_communism_party:0 "CPSU"
- SIK_communism_party_long:0 "Communist Party of the Soviet Union"
- TIB_neutrality_party:0 "Retting Rinpoche"
- YUN_neutrality_party:0 "Kuomintang"
+ SIK_communism_party_long:0 "소련 공산당"
+ TIB_neutrality_party:0 "레팅 린포체"
+ YUN_neutrality_party:0 "국민당"
  MON_communism_party:0 "MAN"
- MON_communism_party_long:0 "Mongol Ardiin Nam"
+ MON_communism_party_long:0 "몽골 인민당"
  TAN_communism_party:0 "CPSU"
- TAN_communism_party_long:0 "Communist Party of the Soviet Union"
+ TAN_communism_party_long:0 "소련 공산당"
  PAR_communism_party:0 "PRF"
- PAR_communism_party_long:0 "Partido Revolucionario Febrerista"
- CUB_democratic_party:0 "Union"
- CUB_democratic_party_long:0 "National Union"
+ PAR_communism_party_long:0 "2월 혁명당"
+ CUB_democratic_party:0 "연합"
+ CUB_democratic_party_long:0 "국민 연합"
  CUB_communism_party:0 "PCC"
- CUB_communism_party_long:0 "Partido Comunista Cubano"
+ CUB_communism_party_long:0 "쿠바 공산당"
  DOM_fascism_party:0 "PD"
- DOM_fascism_party_long:0 "Partido Dominicano"
- HAI_democratic_party:0 "Vincent"
- HAI_democratic_party_long:0 "President Sténio Vincent"
+ DOM_fascism_party_long:0 "도미니카당"
+ HAI_democratic_party:0 "뱅상"
+ HAI_democratic_party_long:0 "스테니오 뱅상 대통령"
  HAI_communism_party:0 "PKA"
- HAI_communism_party_long:0 "Pati Kominis Ayisyen"
+ HAI_communism_party_long:0 "아이티 공산당"
  KOR_communism_party:0 "WPK"
- KOR_communism_party_long:0 "Worker's Party of Korea"
- KOR_democratic_party:0 "Liberal Party"
- KOR_neutrality_party:0 "Yi Dynasty"
+ KOR_communism_party_long:0 "조선로동당"
+ KOR_democratic_party:0 "자유당"
+ KOR_neutrality_party:0 "조선 왕조"
  KOR_fascism_party:0 "NDPC"
- KOR_fascism_party_long:0 "National Defense Policy Committee"
- ICE_democratic_party:1 "Framsóknarflokkurinn"
- ICE_communism_party:1 "Kommúnistaflokkur"
- ICE_communism_party_long:0 "Kommúnistaflokkur Íslands"
- ICE_fascism_party:1 "Þjóðernissinna"
- ICE_fascism_party_long:0 "Flokkur Þjóðernissinna"
- ICE_neutrality_party:1 "Heimastjórnarflokkurinn"
+ KOR_fascism_party_long:0 "국방정책위원회"
+ ICE_democratic_party:1 "진보당"
+ ICE_communism_party:1 "공산당"
+ ICE_communism_party_long:0 "아이슬란드 공산당"
+ ICE_fascism_party:1 "국민당"
+ ICE_fascism_party_long:0 "범국민당"
+ ICE_neutrality_party:1 "독립당"
  SYR_fascism_party:0 "SSNP"
- SYR_fascism_party_long:0 "Syrian Social Nationalist Party"
- SYR_communism_party:0 "Syrian Communist Party"
- SYR_democratic_party:0 "National Bloc"
- SYR_neutrality_party:0 "Royalists"
- LEB_fascism_party:0 "Kataeb"
+ SYR_fascism_party_long:0 "시리아 사회민족주의당"
+ SYR_communism_party:0 "시리아 공산당"
+ SYR_democratic_party:0 "국민 연합"
+ SYR_neutrality_party:0 "왕당파"
+ LEB_fascism_party:0 "카테브"
  LEB_neutrality_party:0 "Yaradi"
- LEB_communism_party:0 "League of Communists"
- LEB_democratic_party:0 "Constitutional Bloc"
- JOR_fascism_party:0 "Jordanian Phalange"
- JOR_neutrality_party:0 "Hashemite"
- JOR_democratic_party:0 "National Liberal Party"
- JOR_communism_party:0 "Jordanian Workers Society"
- EGY_communism_party:0 "Egyptian Communist Party"
- EGY_fascism_party:0 "Misr El-Fatah"
- EGY_democratic_party:0 "Liberation Rally"
- EGY_neutrality_party:0 "Royalists"
- PAL_fascism_party:0 "Al-Muqaddas"
+ LEB_communism_party:0 "공산주의 연맹"
+ LEB_democratic_party:0 "입헌 연합"
+ JOR_fascism_party:0 "요르단 팔랑헤당"
+ JOR_neutrality_party:0 "하심 왕조"
+ JOR_democratic_party:0 "자유당"
+ JOR_communism_party:0 "요르단 노동사회당"
+ EGY_communism_party:0 "이집트 공산당"
+ EGY_fascism_party:0 "청년 이집트당"
+ EGY_democratic_party:0 "자유 행진"
+ EGY_neutrality_party:0 "왕당파"
+ PAL_fascism_party:0 "알 무카다"
  PAL_communism_party:0 "NLL"
- PAL_communism_party_long:0 "National Liberation League"
+ PAL_communism_party_long:0 "국가 자유연맹"
  PAL_democratic_party:0 "SMC"
- PAL_democratic_party_long:0 "Supreme Muslim Council"
- PAL_neutrality_party:0 "Loyalists"
- ISR_communism_party:0 "Maki"
- ISR_democratic_party:0 "Mapai"
- ISR_fascism_party:0 "Helpam"
- ISR_neutrality_party:0 "Central Council"
- VIN_fascism_party:0 "Vietnamese Restoration League" #or Reformation Society   
- VIN_democratic_party:0 "Can Lao Party" #formed in early 50s
- VIN_communism_party:0 "Communist Party of Vietnam" #Viet Minh was more important in early years
- VIN_neutrality_party:0 "Viêt Nam Quoc Dân Đang"
- CAM_fascism_party:0 "Khmerite Party"
- CAM_democratic_party:0 "Democratic Party" #formed in 1946 
- CAM_communism_party:0 "Communist Party of Kampuchea" # aka Khmer Communist Party or a different party Krom Pracheachon aka Krom
- CAM_neutrality_party:0 "Sangkum Reastr Niyum" # or just Sangkum 1955, democratic but right leaning and anti communist
- INS_fascism_party:0 "New Order" #inspired by right wingers from 1960s
+ PAL_democratic_party_long:0 "최고 무슬림 회의"
+ PAL_neutrality_party:0 "왕당파"
+ ISR_communism_party:0 "이스라엘 공산당"
+ ISR_democratic_party:0 "마파이"
+ ISR_fascism_party:0 "헬팜"
+ ISR_neutrality_party:0 "중앙의회"
+ VIN_fascism_party:0 "베트남 복원 연맹" #or Reformation Society   
+ VIN_democratic_party:0 "칸 라오당" #formed in early 50s
+ VIN_communism_party:0 "베트남 공산당" #Viet Minh was more important in early years
+ VIN_neutrality_party:0 "베트남 국민당"
+ CAM_fascism_party:0 "크메르티당"
+ CAM_democratic_party:0 "민주당" #formed in 1946 
+ CAM_communism_party:0 "캄푸치아 공산당" # aka Khmer Communist Party or a different party Krom Pracheachon aka Krom
+ CAM_neutrality_party:0 "캄보디아 인민 사회주의 연합" # or just Sangkum 1955, democratic but right leaning and anti communist
+ INS_fascism_party:0 "신체제" #inspired by right wingers from 1960s
  INS_democratic_party:0 "PNI" #Indonesian National Party founded by Sukarno
  INS_communism_party:0 "PKI" #Partai Komunis Indonesia
- INS_neutrality_party:0 "Democrats" #made up, in reality this guy was a member of PNI 
- MAL_fascism_party:0 "Panoceanic Unionists"
- MAL_democratic_party:0 "United Malays National Organisation" #or UMNO or PEKEMBAR
- MAL_communism_party:0 "Malayan Communist Party" #or MCP
- MAL_neutrality_party:0 "Kesatuan Melayu Muda" #or KMM 
- LAO_fascism_party:0 "Tribal Centralization Party"
- LAO_democratic_party:0 "Democratic Party"
- LAO_communism_party:0 "Pathet Lao"
- LAO_neutrality_party:0 "Royalists"
- MNT_fascism_party:0 "Greens"
- MNT_democratic_party:0 "Democracy League"
- MNT_communism_party:0 "Communist Party of Montenegro" #or KPCG
- MNT_neutrality_party:0 "Federalist Party" # Montenegrin ultra nationalists, start democtratic right wing but went full fascist collaboration in 41'
+ INS_neutrality_party:0 "민주당" #made up, in reality this guy was a member of PNI 
+ MAL_fascism_party:0 "범오세아니아 통합주의"
+ MAL_democratic_party:0 "통일말레이국민조직" #or UMNO or PEKEMBAR
+ MAL_communism_party:0 "말레이시아 공산당" #or MCP
+ MAL_neutrality_party:0 "말레이시아 청년 연맹" #or KMM 
+ LAO_fascism_party:0 "부족 중앙당"
+ LAO_democratic_party:0 "민주당"
+ LAO_communism_party:0 "파테트라오"
+ LAO_neutrality_party:0 "왕당파"
+ MNT_fascism_party:0 "녹색당"
+ MNT_democratic_party:0 "민주 연맹"
+ MNT_communism_party:0 "몬테네그로 공산당" #or KPCG
+ MNT_neutrality_party:0 "연방당" # Montenegrin ultra nationalists, start democtratic right wing but went full fascist collaboration in 41'
  UKR_fascism_party:0 "OUN"
- UKR_democratic_party:0 "Ukrainian National Democratic Alliance" # or UNDO
- UKR_communism_party:0 "Communist Party of Ukraine"
- UKR_neutrality_party:0 "Ukrainian Progress Party"
- GEO_fascism_party:0 "Tbilisi Council"
- GEO_democratic_party:0 "Social Democratic Party of Georgia"
- GEO_communism_party:0 "Communist Party of Georgia"
- GEO_neutrality_party:0 "Gori Convention"
- KAZ_fascism_party:0 "Zhuze Ultşildiq"
- KAZ_democratic_party:0 "Alash Party"
- KAZ_communism_party:0 "Communist Party of Kazakhstan"
- KAZ_neutrality_party:0 "Royalists"
- AZR_fascism_party:0 "Fire Horse Clique"
- AZR_democratic_party:0 "Müsavat"
- AZR_communism_party:0 "Communist Party of Azerbaijan"
- AZR_neutrality_party:0 "Ittihad"
- ARM_fascism_party:0 "Armenian Legion"
- ARM_democratic_party:0 "Armenian Revolutionary Federation" #or ARF 
- ARM_communism_party:0 "Communist Party of Armenia"
- ARM_neutrality_party:0 "Central Authority"
- BLR_fascism_party:0 "Belarusian Central Council"
- BLR_democratic_party:0 "Belarusian Christian Democracy"
- BLR_communism_party:0 "Communist Party of Belarus"
- BLR_neutrality_party:0 "Belarusian Socialist Assembly"
- PAK_democratic_party:0 "Ganatantri Dal"
- PAK_communism_party:0 "Pakistan Socialist Party"
- PAK_neutrality_party:0 "Muslim League"
+ UKR_democratic_party:0 "우크라이나 국민 민주 동맹" # or UNDO
+ UKR_communism_party:0 "우크라이나 공산당"
+ UKR_neutrality_party:0 "우크라이나 진보당"
+ GEO_fascism_party:0 "트빌리시 회의"
+ GEO_democratic_party:0 "조지아 사회민주당"
+ GEO_communism_party:0 "조지아 공산당"
+ GEO_neutrality_party:0 "고리 협약"
+ KAZ_fascism_party:0 "부족주의 연합"
+ KAZ_democratic_party:0 "알라쉬당"
+ KAZ_communism_party:0 "카자흐스탄 공산당"
+ KAZ_neutrality_party:0 "왕당파"
+ AZR_fascism_party:0 "화마 군벌"
+ AZR_democratic_party:0 "뮈사바트"
+ AZR_communism_party:0 "아제르바이잔 공산당"
+ AZR_neutrality_party:0 "이티하드"
+ ARM_fascism_party:0 "아르메니아 군단"
+ ARM_democratic_party:0 "아르메니아 혁명 연맹" #or ARF 
+ ARM_communism_party:0 "아르메니아 공산당"
+ ARM_neutrality_party:0 "중앙 당국"
+ BLR_fascism_party:0 "벨라루스 중앙의회"
+ BLR_democratic_party:0 "벨라루스 기독민주당"
+ BLR_communism_party:0 "벨라루스 공산당"
+ BLR_neutrality_party:0 "벨라루스 사회주의 의회"
+ PAK_democratic_party:0 "가나탄트리 달"
+ PAK_communism_party:0 "파키스탄 사회당"
+ PAK_neutrality_party:0 "무슬림 연맹"
  PRC_democratic_party:0 "KMT-RC"
- PRC_democratic_party_long:0 "Kuomintang Revolutionary Committee"
+ PRC_democratic_party_long:0 "국민당 혁명 위원회"
  PRC_communism_party:0 "CPC"
- PRC_communism_party_long:0 "Communist Party of China"
- SHX_neutrality_party:0 "Kuomintang"
+ PRC_communism_party_long:0 "중국 공산당"
+ SHX_neutrality_party:0 "국민당"
  SHX_communism_party:0 "CPC"
- SHX_communism_party_long:0 "Communist Party of China"
- GXC_neutrality_party:0 "New Guangxi Clique"
+ SHX_communism_party_long:0 "중국 공산당"
+ GXC_neutrality_party:0 "신 광시 군벌"
  GXC_communism_party:0 "CPC"
- GXC_communism_party_long:0 "Communist Party of China"
+ GXC_communism_party_long:0 "중국 공산당"
  YUN_communism_party:0 "CPC"
- YUN_communism_party_long:0 "Communist Party of China"
+ YUN_communism_party_long:0 "중국 공산당"
  MAN_fascism_party:0 "MX"
- MAN_fascism_party_long:0 "Manzhōuguó Xiéhehuì"
+ MAN_fascism_party_long:0 "만주국 협화회"
