--- a/replace/r56_decisions_l_english.yml
+++ b/replace/r56_decisions_l_english.yml
@@ -1,9 +1,9 @@
 ﻿l_english:
  
- the_return_of_the_old_guard_category:0 "The Return of the Old Guard"
- hold_the_neutrality_national_referendum:0 "Form a Reactionary Government"
+ the_return_of_the_old_guard_category:0 "보수파의 귀환"
+ hold_the_neutrality_national_referendum:0 "반동주의 정부 형성"
 
- combat_reports:0 "Combat Reports"
+ combat_reports:0 "전투 보고"
  r56_ENG_decision_support_percy_hobart:0 "Support Percy Hobart"
  r56_ENG_decision_support_percy_hobart_desc:0 "Percy Hobart may have a strange view on how to use tanks and may also be quite unpopular among other generals due to those opinons, but his revolutionary approach to tank design and use may become extremely useful."
  percy_hobart_decision_cost:0 "§H100§!£army_experience  §H50§!£pol_power"
