--- a/CZE_l_english.yml
+++ b/CZE_l_english.yml
@@ -43,7 +43,7 @@
   political_change:0 "\n§Y정당 지지도§!의 변화:\n"
   new_rule:0 "\n새 §Y규칙§!:\n"
   sudetenland_acquired:0 "주데텐란트 병합"
-  AUS_annexed:0 "안슐루츠 완료"
+  AUS_annexed:0 "안슐루스 완료"
   new_blackops_effect:0 "\n 흑색작전:"
 
       tgm:0 "토마시 가리크 마사리크 (1대 대통령)"
@@ -58,12 +58,12 @@
       CZKE_milan_hodza_advisor_desc:0 "밀란 호자는 슬로바키아 출신의 유명한 정치인이면서 저널리스트 입니다.1935년부터 1938년까지 체코슬로바키아의 수상이었습니다.\n\n지역 통합의 지지자 로써,그는 중앙 유럽의 민주 연합을 설립하려는 시도로 더 유명했습니다."
 
     czke.1.t:0 "주데텐란트의 문제"
-    czke.1.d:0 "독일의 라인란트 점령과 함께, 주데텐란트 지역의 독일인들은 날이 갈수록 불안해지고 있습니다. 비록 주데텐 독일당(SdP)의 지도자 콘라드 하인레인은, 체코슬로바카의 독일인들은 독일 국가사회주의에 그들 스스로 거리를 두고있다고 말하며 체코슬로바키아 정부를 안심시켰지만, 고서에는 다르게 말하고 있습니다.\n\nThe right of self-determination for Sudenland Germans, pan-germanism and even open sympathy for the ideals of National Socialism is more than common occurrence in SDP political rallies."
+    czke.1.d:0 "독일의 라인란트 점령과 함께, 주데텐란트 지역의 독일인들은 날이 갈수록 불안해지고 있습니다. 비록 주데텐 독일당(SdP)의 지도자 콘라드 하인레인은, 체코슬로바키아의 독일인들은 독일 국가사회주의에 그들 스스로 거리를 두고있다고 말하며 체코슬로바키아 정부를 안심시켰지만, 보고서에는 다르게 말하고 있습니다.\n\nThe right of self-determination for Sudenland Germans, pan-germanism and even open sympathy for the ideals of National Socialism is more than common occurrence in SDP political rallies."
     czke.1.a:0 "걱정마라.단순히 정치적 포퓰리즘 일 뿐이야."
       CZKE_unruly_minorities:0 "주데텐란트 문제"
-      CZKE_unruly_minorities_desc:0 "Czechoslovakia was a multi-ethnic state created from parts of old Austrio-Hungary Empire and except for the Czechs and Slovaks, was also home to many ethnic Germans, Hungarians, Jews and Rusyns.\n\nThe aftermath of The Great Depression and increasing fascism in Europe causes immerse problems for the young country, especially the ethnic-Germans that were seduced by Hitler's pan-Germanism idea."
+      CZKE_unruly_minorities_desc:0 "체코슬로바키아는 옛 오스트리아-헝가리 제국의 일부에서 만들어진 다민족 국가였으며 체코인들와 슬로바키아인들를 제외하고 많은 독일인, 헝가리인, 유태인, 루신인들이 거주하고 있었습니다.\n\n대공황의 여파와 유럽에서 대두되는 파시즘은 이 신생국, 특히 히틀러의 범독일주의 사상에 현혹된 게르만족에게 심각한 문제를 만들어냅니다."
     czke.2.t:0 "토마시 가리크 마사리크의 장례식"
-    czke.2.d:0 "In Prague, a city in mourning, black flags fluttered from downtown buildings. Busts and pictures of Masaryk with that distinctive, fluffy, white moustache dotted the town and covered the front pages of numerous newspapers.\n\nBlack banners reading “TGM” adorned Saint Vitus Cathedral and buildings on Wenceslas Square. Thousands of soldiers and legionnaires marched in his funeral procession [GetDateText] as 146 military standards made an appearance. Draped with the Czechoslovak flag, his coffin was carried on a gun carriage through the city. On its last leg to Lány, the coffin traveled by train, placed in a car covered in wreaths and flowers.\n\nTomáš Garrigue Masaryk was a Czechoslovak politician, sociologist and philosopher, who as an eager advocate of Czechoslovak independence during World War I became the founder and first President of Czechoslovakia and was re-elected as president three times. He resigned from office in 1935 on the grounds of old age and poor health, and Edvard Beneš succeeded him."
+    czke.2.d:0 "온도시가 애도에 빠진 프라하에서, 시내 건물에서 검은 깃발이 펄럭였습니다. 독특하고 모호한 하얀 콧수염을 가진 마시리크의 흉상과 사진이 온 마을을 뒤덮고 수많은 신문들의 1면을 장식했습니다.\n\n"TGM"이라고 쓰인 검은 현수막들이 성 비투스 대성당과 웬세슬라스 광장에 있는 건물들을 장식하였으며, 수천명의 군인들과 군단들이 그의 장례식을따라 행진하며 [GetDateText] 146개의 군사규격이 등장했습니다. 체코슬로바키아 국기를 두른 채로, 그의 관은 포가에 실려 도시를 지나갔습니다. 라니로 가는 마지막 다리 위에서, 관은 기차 안의 화환과 꽃으로 뒤덮인 차 안에 놓여서 이동했습니다.\n\nTomáš Garrigue Masaryk was a Czechoslovak politician, sociologist and philosopher, who as an eager advocate of Czechoslovak independence during World War I became the founder and first President of Czechoslovakia and was re-elected as president three times. He resigned from office in 1935 on the grounds of old age and poor health, and Edvard Beneš succeeded him."
     czke.2.a:0 "체코슬로바키아의 슬픈날이다."
     czke.3.t:0 "전 체코슬로바키아 대통령의 죽음"
     czke.3.d:0 "In Prague, a city in mourning, black flags fluttered from downtown buildings. Busts and pictures of Masaryk with that distinctive, fluffy, white moustache dotted the town and covered the front pages of numerous newspapers.\n\nBlack banners reading “TGM” adorned Saint Vitus Cathedral and buildings on Wenceslas Square. Thousands of soldiers and legionnaires marched in his funeral procession [GetDateText] as 146 military standards made an appearance. Draped with the Czechoslovak flag, his coffin was carried on a gun carriage through the city. On its last leg to Lány, the coffin traveled by train, placed in a car covered in wreaths and flowers."
@@ -439,7 +439,7 @@
   CZKE_sabotage_anchluss:0 "오스트리아-독일 동맹 사보타주"
   CZKE_sabotage_anchluss_desc:0 "Restoration of the Habsburg Monarchy is as great threat to Czechoslovakia as Austrofascism and a potential alliance Austro-German alliance. We have to stop it at all costs."
   CZKE_sabotage_anchluss_tooltip_reward:0 "\n §MSpecial Bonus:§! Austria will have much higher chance to resist German attempts to take over the country."
-  CZKE_support_oster:0 "국방군 사령부 습격 지원"
+  CZKE_support_oster:0 "국방군 장교 쿠데타 지원"
   CZKE_support_oster_desc:0 "Our sources in Abwehr report that there may be some attempts to overthrow Hitler. Perhaps we could use our inside man to quietly support this iniative..."
   CZKE_support_oster_tooltip_reward:0  "\n §MSpecial Bonus:§! Some Wehrmacht officers may kill Hitler and start a civil war to remove Nazis from power."
     czke.309.t:0 "Hitler is dead!"
@@ -540,7 +540,7 @@
   CZKE_revive_little_entente:0 "소협상국 재건"
   CZKE_revive_little_entente_desc:0 "The Little Entente was an alliance formed in 1920 and 1921 by Czechoslovakia, Romania and Yugoslavia with the purpose of common defense against Hungarian revision and the prevention of a Habsburg restoration. France supported the alliance by signing treaties with each member country. The Little Entente began to break down in 1936 and disbanded completely in 1938."
   CZKE_revive_little_entente_tooltip_reward:0 "\nCreates new faction: §YLittle Entente§!"
-  CZKE_little_entente_alliance:0 "소협상국 제휴"
+  CZKE_little_entente_alliance:0 "소협상국"
   CZKE_little_entente_alliance_negative:0 "Little Entente Alliance"
       little_entente:0 "Little Entente"
     czke.329.t:0 "History of Little Entente alliance" 
@@ -573,7 +573,7 @@
   CZKE_hungary_intervention_desc:0 "Czechoslovakia had complicated relationship with Hungary. Just after proclamation of independence in 1918, border tensions in Slovakia resulted in armed conflict. Since then, Hungary was always somewhat of a thorn in the back of Czechoslovakia."
   CZKE_austria_intervention:0 "오스트리아 개입" 
   CZKE_austria_intervention_desc:0 "Czechoslovakian leadership was well-aware of the raising fascism support in Austria and fears of Austria-Germany alliance of some sort were not just mere superstition as later years would show." 
-  CZKE_claims_bohemian_crown:0 "전 보헤미아 왕국 영토 요구"
+  CZKE_claims_bohemian_crown:0 "전 보헤미아 왕국 영토 영유권 주장"
   CZKE_claims_bohemian_crown_desc:0 "The Slavic Sorbs from Lusatia always wanted to be part of Czechoslovakia. Let's put an international pressure on Germany over some regions that were parts of the Bohemia Crown Lands."
   CZKE_claims_bohemian_crown_tooltip_reward:0 "\nIssues ultimatum to Germany (§YClaims and Limited War Wargoal§!) over parts of former Bohemian Crown Lands (§YNiederschlesien§!)."
     czke.350.t:0 "Claims on Lusatia"
@@ -717,7 +717,7 @@
       CZKE_radola_gajda_general_desc:0 "Radola Gajda, born as Rudolf Geidl, was a Czech/Serbian military commander and politician. He bacame Acting Chief of the General Staff in 1926, however was forced to retire because he had publicly shown himself sympathetic to Italian fascism.\n\nStill a young man of 34, Gajda decided to turn to politics. At the end of 1926 he took part in the founding of the National Fascist Community, modeled on Benito Mussolini's National Fascist Party and became its leader on in 1927."
       CZKE_lev_prchala_general:0 "Lev Prchala"
       CZKE_lev_prchala_general_desc:0 "General Prchala was a staunch opponent of Munich surrender and commander of IV. Army that guarded the critical south-moravian border in 1938.\n\nHe was also suspected to form a plan for a military coup."
-  CZKE_zaolzie_for_alliance:0 "폴란드 동맹을 위한 자올지에"
+  CZKE_zaolzie_for_alliance:0 "폴란드와의 동맹을 위한 자올지에"
   CZKE_zaolzie_for_alliance_desc:0 "Zaolzie region was disputed between Czechoslovakia and Poland since 1920. It's time to solve this issue and join forces against the Fascists and Communists."
   CZKE_zaolzie_for_alliance_tooltip_reward_1:0 "\n§YDiplomatic Event§! for §YPoland§! with proposal to finally solve the Cieszyn Silesia issue.\n"
   CZKE_zaolzie_for_alliance_tooltip_reward_2:0 "\n§YPoland§! joins the §YLittle Entente§! in exchange for §YZaolzie§! region (80% chance)." 
@@ -760,7 +760,7 @@
       czech_fascist_revolutionaries_desc:0 "If support for Neutrality rises above 70%, the nation will be plunged into civil war. If support for Neutrality drops below 30%, revolutionary activity will stop."
     czke.427.t:0 "Fascists March on Prague"
     czke.428.t:0 "Gajda Ridiculed"
-  CZKE_ban_communism:0 "체코슬로바키아 주 통합"
+  CZKE_ban_communism:0 "단결된 체코슬로바키아"
   CZKE_ban_communism_desc:0 "The fascists in Czechoslovakia dreamt about strong, national state for decades. Finally, the time has come to change dreams into reality."
   CZKE_ban_communism_tooltip_reward:0 "\nChoice between three §YFascism§! related §YNational Ideas§!."
   removes_communism_ideas:0 "Removes all §YCommunism§! related §YNational Ideas§!"
@@ -849,7 +849,7 @@
     czke.442.a:0 "Strenghten the party."
       CZKE_klement_gottwald:0 "Klement Gottwald"
       CZKE_klement_gottwald_desc:0 "Klement Gottwald was a Czechoslovak communist politician and longtime leader of the Communist Party of Czechoslovakia (KSČ). After the communist coup, he was Prime Minister of Czechoslovakia from 1946 to 1948 and President from 1948 to 1953."
-  CZKE_peoples_revolution:0 "인민 민병대 설립"
+  CZKE_peoples_revolution:0 "적위대 창설"
   CZKE_peoples_revolution_desc:0 "Communists came to power in Czechoslovakia in 1948. But who knows? If political situation was different in Europe, they may have come to the power sooner."
   CZKE_peoples_revolution_tooltip_reward:0 "\n Nationalization of §YIndustry§! OR §YCommunism§! related §YNational Idea§! OR §YManpower§! related §YNational Idea§!"
     czke.443.t:0 "People's Milita in Czechoslovakia"
