--- a/BAV_l_english.yml
+++ b/BAV_l_english.yml
@@ -1,22 +1,22 @@
 ﻿l_english: 
  BAV_communism_party:0 "KPB"
- BAV_communism_party_long:0 "Kommunistische Partei Bayerns"
+ BAV_communism_party_long:0 "바이에른 공산당"
  BAV_democratic_party:0 "BVP"
- BAV_democratic_party_long:0 "Bayerische Volkspartei"
- BAV_neutrality_party:0 "Bayernpartei"
+ BAV_democratic_party_long:0 "바이에른 인민당"
+ BAV_neutrality_party:0 "바이에른당"
  BAV_fascism_party:0 "BNSP"
- BAV_fascism_party_long:0 "Bayerische Nationalsozialistische Partei"
+ BAV_fascism_party_long:0 "바이에른 국가사회주의자당"
  
  #Bayerische Räterepublik
- BAV_communism:0 "Bavarian Council Republic"
- BAV_democratic:0 "Free State of Bavaria"
- BAV_neutrality:0 "Kingdom of Bavaria"
- BAV_fascism:0 "Bavaria" 
+ BAV_communism:0 "바이에른 평의회 공화국"
+ BAV_democratic:0 "바이에른 자유국"
+ BAV_neutrality:0 "바이에른 왕국"
+ BAV_fascism:0 "바이에른" 
 
  #made panzerschrecks
- BAV_generic_infantry_equipment_manufacturer:0 "Schricker & Co."
- BAV_rapp_motorenwerke:0 "Rapp Motorenwerke"
+ BAV_generic_infantry_equipment_manufacturer:0 "쉬리커 상회"
+ BAV_rapp_motorenwerke:0 "라프 모르텐베르케"
  BAV_generic_motorized_equipment_manufacturer:0 "BMW"
- BAV_generic_industrial_concern:0 "Maurer AG"
+ BAV_generic_industrial_concern:0 "마우어 AG"
  bmw_aircraft:0 "BMW"
- BAV_generic_electronics_concern:0 "Rohde & Schwarz" 
+ BAV_generic_electronics_concern:0 "로데 & 슈바르츠" 
