--- a/CZE_l_english.yml
+++ b/CZE_l_english.yml
@@ -84,7 +84,7 @@
       CZKE_fifth_column_2:0 "제 5열"
       CZKE_fifth_column_desc_2:0 "주데텐란트 독일인들의 의용병들이 체코슬로바키아에서 활동하고 있습니다."
     czke.6.t:0 "동원!"
-    czke.6.d:0 "체코슬로바키아 정부는 체코슬로바키아가 주데텐란트를 독일에 양도할 것을 제안한 영국과 프랑스의 제안을 거부했습니다.\n\nA state of emergency and general mobilization was declared soon after. The mobilization order applied to about 1,250,000 soldiers, which included reservists called up earlier for various exercises.\n\nResponse to the announcement of a general mobilization was extremely fast; first reservists reported for duty just a few minutes after hearing the decree from the radio and the influx of soldiers increased rapidly in following hours.\n\nDuring the night, the army took control and guarded key strategic buildings and military units reformed to war organization.\n\nCzechoslovakia was ready to defend its independence."
+    czke.6.d:0 "체코슬로바키아 정부는 체코슬로바키아가 주데텐란트를 독일에 양도할 것을 제안한 영국과 프랑스의 제안을 거부했습니다.\n\n곧이어 비상사태와 총동원령이 내려졌습니다. 동원령은 약 125만 명의 군인들에게 내려졌고 예비군들은 여러 가지 훈련을 위해 일찍 소집되었습니다.\n\n총동원령 발표에 대한 대응은 매우 빨랐습니다; 첫 예비역들은 라디오로부터의 동원령을 듣고 나서 불과 몇 분 후에 임무를 위해 모집되었고 그 후 몇 시간 안에 병사들의 입대가 급격히 증가하였습니다.\n\nDuring the night, the army took control and guarded key strategic buildings and military units reformed to war organization.\n\nCzechoslovakia was ready to defend its independence."
     czke.6.a:0 "진실은 승리한다!"
       CZKE_mobilization_1938:0 "동원이다."
       CZKE_mobilization_1938_desc:0 "총동원령이 발표되었습니다.예비군들이 그들의 부대로 모이고 있습니다."
